added logos to the app

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -123,14 +123,17 @@
 "surveycreatedsuccessfully":"Survey created successfully",
 "plscmpltannouncement":"Please complete the announcement details",
 "announcementcreatedsuccessfully":"Announcement created successfully",
-"errorr"            :"Error fetching responses: $e",
 "policecommunity"   :"Police Community Engagement",
+  "survey": "Survey",
+  "anunce": "Announcement",
+  "review": "Review",
 "createsurvey"      :"Create Survey",
 "surveytitle"       :"Survey Title",
 "entersurveyquestion":"Enter Survey Question",
 "entersurveyoption":"Enter Survey Option",
 "addoption":"Add Option",
 "addquestion":"Add Question",
+  "sub": "Submit Survey",
 "reviewsurvey":"Review Survey",
 "reviewyoursurvey":"Review Your Survey",
 "options":"Options",
@@ -156,4 +159,89 @@
 "fir": "FIR",
   "main": "Main",
   "create": "Create",
+  "id":"Survey ID",
+  "no": "No survey responses available.",
+  "ndps"   :"NDPS",
+  "scst"   :"SCST Act",
+  "pmla"   :"PMLA",
+  "crpc"   :"CrPC",
+  "ipc"    :"IPC",
+  "children"  :"Crimes Against Children",
+  "state"     :"Offenses Against the State",
+  "foreigner" :"Crimes Against Foreigners",
+  "crimeScSt" :"Crimes Against SCs and STs",
+  "cyber"     :"Cyber Crime",
+  "economic"  :"Economic Offense",
+  "women"     :"Crimes Against Women",
+  "fine": "Fine",
+  "both": "Both",
+  "imprisonment": "Imprisonment",
+  "statute"   :"Statute",
+  "offense"   : "Offense Category",
+  "penalty"   : "Penalty",
+  "imprisonments":"Imprisonment Duration Served (in years)",
+  "escape"      :"Risk of Escape",
+  "influencer" :"Risk of Influence",
+  "surety" :"Surety Bond Required",
+  "personal" :"Personal Bond Required",
+  "fines"  :"Fines Applicable",
+  "served"  :"Served Half Term",
+  "riskScore" :"Risk Score",
+  "severity" :"Penalty Severity",
+  "selectlabel" :"Please select",
+  "rror" :"Error",
+  "granted" :"Bail Granted",
+  "denied" :"Bail Denied",
+  "ok"  : "OK",
+  "fyn" :"Fine",
+  "oth" :"Both",
+  "imprison": "Imprisonment",
+  "microphone" :"Tap the microphone to start",
+  "speech" :"Speech recognition is not available.",
+  "deletemsg" :"Delete Message",
+  "share" :"Share",
+  "askquestion":"Ask a question...",
+  "failmsg" :"Failed to send message.",
+  "nomsg" :"No messages yet.",
+  "writemsg" :"Write a message...",
+  "selectadvocate":"Select an Advocate",
+  "noadvocate" :"No advocates available.",
+  "low" :"Low",
+  "pending":"Pending",
+  "cloudinary":"Failed to upload file to Cloudinary.",
+  "complaintsub":"Complaint submitted successfully!",
+  "filecom":"File a Complaint",
+  "incidentdesc":"Incident Description",
+  "providedesc":"Please provide a description of the incident.",
+  "prior":"Priority",
+  "low":"Low",
+  "medium":"Medium",
+  "high": "High",
+  "usecurrentloc":"Use Current Location",
+  "attach":"Attach Media/Document",
+  "submitcomp":"Submit Complaint",
+  "governmentscheme":"Government Schemes & Legal Rights",
+  "surveys":"Surveys",
+  "announcements":"Announcements",
+  "nosurveys":"No surveys available.",
+  "untitledsurvey":"Untitled Survey",
+  "sursub":"Survey submitted successfully",
+  "surdetails":"Survey Details",
+  "alreadyans":"You have already answered this survey.",
+  "subsurvey":"Submit Survey",
+  "noannoun":"No announcements available.",
+  "untitledannoun":"Untitled Announcement",
+  "announdet":"Announcement Details",
+  "untscheme":"Untitled Scheme",
+  "nodescAvl":"Description not available.",
+  "instructions": "Instructions:",
+  "noinst":"No instructions available.",
+  "unableopen":"Unable to open registration link.",
+  "regScheme":"Register for Scheme",
+  "nouserName":"User name not available.",
+  "chtbt" :"Chatbot",
+  "prfl" :"profile",
+  "fil" :"filing",
+  "cht" :"chat"
+
 }
