--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -1,83 +1,245 @@
 {
-  "hello"          : "नमस्ते, मैं जुडिका आपकी कानूनी सहायक हूं.",
-  "mymission"      : "मेरा मिशन यह सुनिश्चित करना है कि हर किसी को कानूनी प्रणाली में वह सहायता मिले जिसकी उन्हें आवश्यकता है। चाहे आप सलाह मांग रहे हों, जमानत पर मार्गदर्शन की तलाश कर रहे हों, या कानूनी शर्तों की त्वरित समझ की आवश्यकता हो, मैं आपकी मदद के लिए यहाँ हूँ।",
-  "getstarted"     : "शुरू हो जाओ",
-  "makinglegal"    : "कानूनी सहायता को स्पष्ट एवं सुलभ बनाना।",
-  "isimplify"      : "मैं जटिल कानूनी शर्तों और प्रक्रियाओं को सरल बनाता हूँ, जिससे आम उपयोगकर्ताओं को उनके अधिकारों और विकल्पों को समझने में मदद मिलती है। चाहे कोई कानूनी मुद्दा हो या जमानत प्रक्रिया से गुजरना हो, मैं स्पष्ट, सीधा मार्गदर्शन प्रदान करता हूँ। मेरा लक्ष्य यह सुनिश्चित करना है कि हर किसी को विश्वसनीय कानूनी सहायता मिले, चाहे वे कोई भी हों।",
-  "empowering"     : "त्वरित, विश्वसनीय कानूनी संसाधनों के साथ अधिवक्ताओं को सशक्त बनाना।",
-  "iprovide"       : "मैं वकीलों को केस संदर्भों और कानूनी मिसालों से लेकर प्रक्रियात्मक दिशा-निर्देशों तक आवश्यक कानूनी संसाधनों तक तेज़ और भरोसेमंद पहुँच प्रदान करता हूँ। मेरा लक्ष्य आपके काम को सुव्यवस्थित करना है, जिससे आप अपने ग्राहकों को प्रभावी ढंग से सहायता देने पर अधिक ध्यान केंद्रित कर सकें।",
-  "streamlining"   : "सटीक कानूनी भाषा के साथ एफआईआर दर्ज करने की प्रक्रिया को सुव्यवस्थित करना। ",
-  "iassist"        : "मैं एनएलपी का उपयोग करके व्यक्तिगत शिकायतों को सटीक कानूनी भाषा में बदलकर पुलिस अधिकारियों की सहायता करता हूं, एफआईआर दर्ज करने को सरल और तेज करने के लिए प्रासंगिक कानूनों और धाराओं की पहचान करता हूं। यह सुनिश्चित करता है कि एफआईआर कानूनी मानकों के अनुरूप हो, जिससे अधिकारी कानूनी विशेषज्ञ तक तत्काल पहुंच के बिना भी शिकायतों का अधिक कुशलता से जवाब दे सकें।",
-  "judica"         : "जुडिका",
-  "username"       : "उपयोगकर्ता नाम",
-  "email"          : "ईमेल",
-  "password"       : "पासवर्ड",
-  "confirmpassword": "पासवर्ड की पुष्टि कीजिये",
-  "citizen"        : "नागरिक",
-  "police"         : "पुलिस",
-  "advocate"       : "वकील",
-  "register"       : "पंजीकरण करवाना",
-  "haveanaccount"  : "क्या आपके पास खाता है? लॉगिन करें",
-  "forgotpassword" : "पासवर्ड भूल गए",
-  "login"          : "लॉग इन करें",
-  "orcontinuewith" : "या जारी रखें",
-  "donthaveaccount": "आपके पास खाता नहीं है? साइन अप करें",
-  "chatbot"        : "चैटबॉट",
-  "askaquestion"   : "प्रश्न पूछें",
-  "profile"        : "प्रोफ़ाइल",
-  "name"           : "नाम",
-  "mobilenumber"   : "मोबाइल नंबर",
-  "dateofbirth"    : "जन्म तिथि",
-  "notavailable"   : "उपलब्ध नहीं है",
-  "address"        : "पता",
-  "Logout"         : "लॉग आउट",
-  "clicktoupload"  : "अपलोड करने के लिए क्लिक करें",
-  "save"           : "बचाना",
-  "cancel"         : "रद्द करना",
-  "fir"            : "प्राथमिकी",
-  "generatefir"    : "एफआईआर जनरेट करें",
-  "viewfir"        : "एफआईआर देखें",
-  "booknumber"     : "पुस्तक संख्या",
-  "formnumber"     : "फॉर्म नंबर",
+  "hello": "नमस्ते, मैं आपकी कानूनी सहायक जुडिका हूँ।",
+  "mymission": "मेरा मिशन यह सुनिश्चित करना है कि हर किसी को कानूनी प्रणाली में आवश्यक सहायता मिले। चाहे आप सलाह चाहते हों, जमानत के बारे में मार्गदर्शन चाहते हों, या कानूनी शब्दावली को जल्दी समझना चाहते हों, मैं यहां मदद के लिए हूँ।",
+  "getstarted": "शुरू करें",
+  "makinglegal": "कानूनी सहायता को स्पष्ट और सुलभ बनाना।",
+  "isimplify": "मैं जटिल कानूनी शब्दावली और प्रक्रियाओं को सरल बनाता हूँ, जिससे आम उपयोगकर्ताओं को उनके अधिकार और विकल्प समझने में मदद मिलती है। चाहे आप कानूनी समस्या का सामना कर रहे हों या जमानत प्रक्रिया को नेविगेट कर रहे हों, मैं स्पष्ट और सीधा मार्गदर्शन प्रदान करता हूँ। मेरा लक्ष्य यह सुनिश्चित करना है कि हर किसी को विश्वसनीय कानूनी सहायता मिले, चाहे वे कौन हों।",
+  "empowering": "त्वरित और विश्वसनीय कानूनी संसाधनों के साथ वकीलों को सशक्त बनाना।",
+  "iprovide": "मैं वकीलों को केस संदर्भ, कानूनी पूर्ववर्ती और प्रक्रियात्मक दिशानिर्देशों जैसे आवश्यक कानूनी संसाधनों तक त्वरित और विश्वसनीय पहुंच प्रदान करता हूँ। मेरा लक्ष्य आपके काम को सुव्यवस्थित करना है, ताकि आप अपने ग्राहकों को अधिक प्रभावी ढंग से सहायता प्रदान कर सकें।",
+  "streamlining": "सटीक कानूनी भाषा के साथ FIR दर्ज करने की प्रक्रिया को सरल बनाना।",
+  "iassist": "मैं पुलिस अधिकारियों की मदद करता हूँ, NLP का उपयोग करके व्यक्तिगत शिकायतों को सटीक कानूनी भाषा में बदलता हूँ, संबंधित कानूनों और धाराओं की पहचान करता हूँ, ताकि FIR दर्ज करने की प्रक्रिया को सरल और तेज किया जा सके। यह सुनिश्चित करता है कि FIR कानूनी मानकों के अनुरूप हो, जिससे पुलिस अधिकारी बिना किसी कानूनी विशेषज्ञ की तत्काल पहुंच के भी शिकायतों पर अधिक प्रभावी ढंग से प्रतिक्रिया दे सकें।",
+  "judica": "जुडिका",
+  "username": "उपयोगकर्ता नाम",
+  "email": "ईमेल",
+  "password": "पासवर्ड",
+  "confirmpassword": "पासवर्ड की पुष्टि करें",
+  "citizen": "नागरिक",
+  "police": "पुलिस",
+  "advocate": "वकील",
+  "register": "पंजीकरण करें",
+  "haveanaccount": "क्या आपके पास पहले से एक खाता है?",
+  "forgotpassword": "पासवर्ड भूल गए?",
+  "login": "लॉगिन",
+  "orcontinuewith": "या जारी रखें",
+  "donthaveaccount": "खाता नहीं है? साइन अप करें",
+  "chatbot": "चैटबॉट",
+  "profile": "प्रोफ़ाइल",
+  "name": "नाम",
+  "mobilenumber": "मोबाइल नंबर",
+  "dateOfBirth": "जन्म तिथि",
+  "notavailable": "उपलब्ध नहीं है",
+  "address": "पता",
+  "logout": "लॉगआउट",
+  "clicktoupload": "अपलोड करने के लिए क्लिक करें",
+  "save": "सहेजें",
+  "cancel": "रद्द करें",
+  "fir": "FIR",
+  "generatefir": "FIR जनरेट करें",
+  "viewfir": "FIR देखें",
+  "booknumber": "बुक नंबर",
+  "formnumber": "फॉर्म नंबर",
   "policestationame": "पुलिस स्टेशन का नाम",
-  "district"       : "ज़िला",
-  "dhoccurrence"   : "घटना की तिथि/घंटा",
-  "dhreported"     : "रिपोर्ट की गई तारीख/घंटा",
-  "informername"   : "सूचनाकर्ता का नाम",
-  "descripoffense" : "अपराध का विवरण",
-  "placeofoccur"   : "घटना का स्थान",
-  "criminalname"   : "आपराधिक नाम",
-  "investsteps"    : "जांच के चरण",
-  "dispatchtime"   : "डिस्पैच का समय",
-  "bail"           : "जमानत",
-  "statute"        : "क़ानून",
-  "ndps"           : "एनडीपीएस",
-  "scst"           : "एससी एसटी एक्ट",
-  "pmla"           : "पीएमएलए",
-  "crpc"           : "सीआरपीसी",
-  "ipc"            : "भारतीय दंड संहिता",
+  "district": "जिला",
+  "dhoccurrence": "घटना की तारीख/समय",
+  "dhreported": "रिपोर्ट की तारीख/समय",
+  "informername": "सूचनादाता का नाम",
+  "descripoffense": "अपराध का विवरण",
+  "placeofoccur": "घटना स्थल",
+  "criminalname": "अपराधी का नाम",
+  "investsteps": "जांच के कदम",
+  "dispatchtime": "डिस्पैच समय",
+  "nofirsavailable": "कोई FIR उपलब्ध नहीं है",
+  "bail": "जमानत",
+  "statute": "कानून",
+  "ndps": "NDPS",
+  "scst": "SC ST अधिनियम",
+  "pmla": "PMLA",
+  "crpc": "CrPC",
+  "ipc": "IPC",
   "offensecategory": "अपराध श्रेणी",
-  "crimeschildren" : "बच्चों के विरुद्ध अपराध",
-  "offensestate"   : "राज्य के विरुद्ध अपराध",
-  "crimesforeigner": "विदेशियों के विरुद्ध अपराध",
-  "crimesscst"     : "अनुसूचित जातियों और अनुसूचित जनजातियों के विरुद्ध अपराध",
-  "cybercrime"     : "साइबर अपराध",
+  "crimeschildren": "बच्चों के खिलाफ अपराध",
+  "offensestate": "राज्य के खिलाफ अपराध",
+  "crimesforeigner": "विदेशियों के खिलाफ अपराध",
+  "crimesscst": "SC और ST के खिलाफ अपराध",
+  "cybercrime": "साइबर अपराध",
   "economicoffense": "आर्थिक अपराध",
-  "crimeswomen"    : "महिलाओं के विरुद्ध अपराध",
-  "penalty"        : "जुर्माना",
-  "fine"           : "जुर्माना",
-  "imprisonment"   : "कैद होना",
-  "both"           : "दोनों",
-  "imprisonserved" : "कारावास की अवधि (वर्षों में)",
-  "riskofescape"   : "भागने का जोखिम",
-  "no"             : "नहीं",
-  "yes"            : "हाँ",
+  "crimeswomen": "महिलाओं के खिलाफ अपराध",
+  "penalty": "दंड",
+  "fine": "जुर्माना",
+  "imprisonment": "कारावास",
+  "both": "दोनों",
+  "imprisonserved": "कारावास की अवधि (वर्षों में)",
+  "riskofescape": "भागने का जोखिम",
+  "no": "नहीं",
+  "yes": "हाँ",
   "riskofinfluence": "प्रभाव का जोखिम",
-  "suretybond"     : "ज़मानत बांड आवश्यक",
-  "personalbond"   : "व्यक्तिगत बांड आवश्यक",
-  "finesapplicable": "लागू जुर्माना",
-  "servedhalfterm" : "आधा कार्यकाल पूरा किया",
-  "riskscore"      : "जोखिम स्कोर",
-  "penaltySeverity":"दंड की गंभीरता",
-  "submit"         : "जमा करना"
+  "suretybond": "जमानत बॉन्ड आवश्यक है",
+  "personalbond": "व्यक्तिगत बॉन्ड आवश्यक है",
+  "finesapplicable": "जुर्माना लागू है",
+  "servedhalfterm": "आधी अवधि पूरी हो चुकी है",
+  "riskscore": "जोखिम स्कोर",
+  "penaltySeverity": "दंड की गंभीरता",
+  "submit": "जमा करें",
+  "please": "कृपया एक ईमेल पता दर्ज करें।",
+  "resetpassword": "पासवर्ड रीसेट ईमेल भेजा गया है! अपना इनबॉक्स जांचें।",
+  "error": "एक त्रुटि हुई। कृपया पुनः प्रयास करें।",
+  "enteremail": "अपना ईमेल दर्ज करें",
+  "repassword": "पासवर्ड रीसेट करें →",
+  "cannotemail": "ईमेल खाली नहीं हो सकता",
+  "cannotpasswort": "पासवर्ड खाली नहीं हो सकता",
+  "usernotfound": "उपयोगकर्ता भूमिका नहीं मिली।",
+  "pleasewait": "कृपया प्रतीक्षा करें...",
+  "continu": "या जारी रखें",
+  "account": "खाता नहीं है?",
+  "sign": "साइन अप करें",
+  "selectLanguage": "भाषा चुनें",
+  "changessaved": "परिवर्तन सफलतापूर्वक सहेजे गए!",
+  "edittitle": "$title संपादित करें",
+  "enternewtitle": "नया $title दर्ज करें",
+  "passworddont": "पासवर्ड मेल नहीं खाते!",
+  "regsuccess": "पंजीकरण सफल!",
+  "weakPassword": "कमजोर-पासवर्ड",
+  "passwordtooweak": "प्रदान किया गया पासवर्ड बहुत कमजोर है।",
+  "emailalreadyinuse": "ईमेल-पहले-से-उपयोग-में-है",
+  "alreadyexist": "उस ईमेल के लिए खाता पहले से मौजूद है।",
+  "invalidemail": "अमान्य-ईमेल",
+  "notvalid": "प्रदान किया गया ईमेल अमान्य है।",
+  "error": "एक त्रुटि हुई। कृपया पुनः प्रयास करें।",
+  "users": "उपयोगकर्ता",
+  "role": "भूमिका",
+  "judica": "जुडिका",
+  "selectrole": "भूमिका चुनें",
+  "chathistory": "चैट इतिहास",
+  "question": "प्रश्न",
+  "answer": "उत्तर",
+  "errore": "त्रुटि: $e",
+  "askaquestion": "एक प्रश्न पूछें...",
+  "delete": "हटाएं",
+  "share": "साझा करें",
+  "deletemsg": "संदेश हटाएं",
+  "policecommunity": "पुलिस समुदाय जुड़ाव",
+  "pleaseentertitle": "कृपया शीर्षक और प्रश्न दर्ज करें",
+  "surveycreatedsuccessfully": "सर्वे सफलतापूर्वक बनाया गया",
+  "plscmpltannouncement": "कृपया घोषणा विवरण पूरा करें",
+  "announcementcreatedsuccessfully": "घोषणा सफलतापूर्वक बनाई गई",
+  "policecommunity": "पुलिस समुदाय जुड़ाव",
+  "survey": "सर्वे",
+  "anunce": "घोषणा",
+  "review": "समीक्षा",
+  "createsurvey": "सर्वे बनाएं",
+  "surveytitle": "सर्वे शीर्षक",
+  "entersurveyquestion": "सर्वे प्रश्न दर्ज करें",
+  "entersurveyoption": "सर्वे विकल्प दर्ज करें",
+  "addoption": "विकल्प जोड़ें",
+  "addquestion": "प्रश्न जोड़ें",
+  "sub": "सर्वे जमा करें",
+  "reviewsurvey": "सर्वे समीक्षा करें",
+  "reviewyoursurvey": "अपने सर्वे की समीक्षा करें",
+  "options": "विकल्प",
+  "submitsurvey": "सर्वे जमा करें",
+  "editsurvey": "सर्वे संपादित करें",
+  "showresponses": "प्रतिक्रियाएं दिखाएं",
+  "createpublicannouncement": "सार्वजनिक घोषणा बनाएं",
+  "title": "शीर्षक",
+  "description": "विवरण",
+  "scheme": "योजना (यदि लागू हो)",
+  "instruction": "निर्देश",
+  "submitannouncement": "घोषणा जमा करें",
+  "surveyresponses": "सर्वे प्रतिक्रियाएं",
+  "noresponseyet": "अभी तक कोई प्रतिक्रिया नहीं।",
+  "registrationlink": "पंजीकरण लिंक",
+  "viewfirpdf": "FIR PDF देखें",
+  "active": "सक्रिय शिकायतें",
+  "resolvedcomplaints": "हल की गई शिकायतें",
+  "all": "सभी",
+  "high": "उच्च",
+  "medium": "मध्यम",
+  "low": "कम",
+  "fir": "FIR",
+  "main": "मुख्य",
+  "create": "बनाएं",
+  "id": "सर्वे ID",
+  "no": "कोई सर्वे प्रतिक्रिया उपलब्ध नहीं है।",
+  "ndps": "NDPS",
+  "scst": "SCST अधिनियम",
+  "pmla": "PMLA",
+  "crpc": "CrPC",
+  "ipc": "IPC",
+  "children": "बच्चों के खिलाफ अपराध",
+  "state": "राज्य के खिलाफ अपराध",
+  "foreigner": "विदेशियों के खिलाफ अपराध",
+  "crimeScSt": "SC और ST के खिलाफ अपराध",
+  "cyber": "साइबर अपराध",
+  "economic": "आर्थिक अपराध",
+  "women": "महिलाओं के खिलाफ अपराध",
+  "fine": "जुर्माना",
+  "both": "दोनों",
+  "imprisonment": "कारावास",
+  "statute": "कानून",
+  "offense": "अपराध श्रेणी",
+  "penalty": "दंड",
+  "imprisonment": "कारावास की अवधि (वर्षों में)",
+  "escape": "भागने का जोखिम",
+  "influencer": "प्रभाव का जोखिम",
+  "surety": "जमानत बॉन्ड आवश्यक है",
+  "personal": "व्यक्तिगत बॉन्ड आवश्यक है",
+  "fines": "जुर्माना लागू है",
+  "served": "आधी अवधि पूरी हो चुकी है",
+  "riskScore": "जोखिम स्कोर",
+  "severity": "दंड की गंभीरता",
+  "selectlabel": "कृपया $label चुनें",
+  "rror": "त्रुटि",
+  "granted": "जमानत मंजूर",
+  "denied": "जमानत अस्वीकृत",
+  "ok": "ठीक है",
+  "fyn": "जुर्माना",
+  "oth": "दोनों",
+  "imprison": "कारावास",
+  "microphone": "माइक्रोफोन टैप करके शुरू करें",
+  "speech": "स्पीच रिकग्निशन उपलब्ध नहीं है।",
+  "deletemsg": "संदेश हटाएं",
+  "share": "साझा करें",
+  "askquestion": "एक प्रश्न पूछें...",
+  "failmsg": "संदेश भेजने में विफल।",
+  "nomsg": "अभी तक कोई संदेश नहीं।",
+  "writemsg": "एक संदेश लिखें...",
+  "selectadvocate": "एक वकील चुनें",
+  "noadvocate": "कोई वकील उपलब्ध नहीं है।",
+  "low": "कम",
+  "pending": "लंबित",
+  "cloudinary": "क्लाउडिनरी पर फ़ाइल अपलोड करने में विफल।",
+  "complaintsub": "शिकायत सफलतापूर्वक दर्ज की गई!",
+  "filecom": "शिकायत दर्ज करें",
+  "incidentdesc": "घटना का विवरण",
+  "providedesc": "कृपया घटना का विवरण दें।",
+  "prior": "प्राथमिकता",
+  "low": "कम",
+  "medium": "मध्यम",
+  "high": "उच्च",
+  "usecurrentloc": "वर्तमान स्थान का उपयोग करें",
+  "attach": "मीडिया/दस्तावेज़ संलग्न करें",
+  "submitcomp": "शिकायत जमा करें",
+  "governmentscheme": "सरकारी योजनाएं और कानूनी अधिकार",
+  "surveys": "सर्वे",
+  "announcements": "घोषणाएं",
+  "nosurveys": "कोई सर्वे उपलब्ध नहीं है।",
+  "untitledsurvey": "अनटाइटल्ड सर्वे",
+  "sursub": "सर्वे सफलतापूर्वक जमा किया गया",
+  "surdetails": "सर्वे विवरण",
+  "alreadyans": "आपने पहले ही इस सर्वे का उत्तर दे दिया है।",
+  "subsurvey": "सर्वे जमा करें",
+  "noannoun": "कोई घोषणा उपलब्ध नहीं है।",
+  "untitledannoun": "अनटाइटल्ड घोषणा",
+  "announdet": "घोषणा विवरण",
+  "untscheme": "अनटाइटल्ड योजना",
+  "nodescAvl": "विवरण उपलब्ध नहीं है।",
+  "instructions": "निर्देश:",
+  "noinst": "कोई निर्देश उपलब्ध नहीं है।",
+  "unableopen": "पंजीकरण लिंक खोलने में असमर्थ।",
+  "regScheme": "योजना के लिए पंजीकरण करें",
+  "nouserName": "उपयोगकर्ता नाम उपलब्ध नहीं है।",
+  "chtbt": "चैटबॉट",
+  "prfl": "प्रोफ़ाइल",
+  "fil": "फाइलिंग",
+  "cht": "चैट"
 }
