--- a/lib/l10n/app_kn.arb
+++ b/lib/l10n/app_kn.arb
@@ -1,83 +1,245 @@
 {
-  "hello"          : "ನಮಸ್ಕಾರ, ನಾನು ಜುಡಿಕಾ ನಿಮ್ಮ ಕಾನೂನು ಸಹಾಯಕ.",
-  "mymission"      : "ಕಾನೂನು ವ್ಯವಸ್ಥೆಯಲ್ಲಿ ಎಲ್ಲರಿಗೂ ಅಗತ್ಯವಿರುವ ಬೆಂಬಲ ಸಿಗುವಂತೆ ನೋಡಿಕೊಳ್ಳುವುದು ನನ್ನ ಧ್ಯೇಯ. ನೀವು ಸಲಹೆ ಪಡೆಯುತ್ತಿರಲಿ, ಜಾಮೀನಿನ ಕುರಿತು ಮಾರ್ಗದರ್ಶನ ಪಡೆಯುತ್ತಿರಲಿ ಅಥವಾ ಕಾನೂನು ನಿಯಮಗಳನ್ನು ತ್ವರಿತವಾಗಿ ಅರ್ಥಮಾಡಿಕೊಳ್ಳುವ ಅಗತ್ಯವಿರಲಿ, ನಾನು ಸಹಾಯ ಮಾಡಲು ಇಲ್ಲಿದ್ದೇನೆ.",
-  "getstarted"     : "ಪ್ರಾರಂಭಿಸಲು ಒತ್ತಿ",
-  "makinglegal"    : "ಕಾನೂನು ಬೆಂಬಲವನ್ನು ಸ್ಪಷ್ಟ ಮತ್ತು ಪ್ರವೇಶಿಸುವಂತೆ ಮಾಡುವುದು.",
-  "isimplify"      : "ನಾನು ಸಂಕೀರ್ಣ ಕಾನೂನು ನಿಯಮಗಳು ಮತ್ತು ಪ್ರಕ್ರಿಯೆಗಳನ್ನು ಸರಳಗೊಳಿಸುತ್ತೇನೆ, ನಿಯಮಿತ ಬಳಕೆದಾರರಿಗೆ ಅವರ ಹಕ್ಕುಗಳು ಮತ್ತು ಆಯ್ಕೆಗಳನ್ನು ಅರ್ಥಮಾಡಿಕೊಳ್ಳಲು ಸಹಾಯ ಮಾಡುತ್ತೇನೆ. ಕಾನೂನು ಸಮಸ್ಯೆಯನ್ನು ಎದುರಿಸುತ್ತಿರಲಿ ಅಥವಾ ಜಾಮೀನು ಪ್ರಕ್ರಿಯೆಯನ್ನು ನ್ಯಾವಿಗೇಟ್ ಮಾಡುತ್ತಿರಲಿ, ನಾನು ಸ್ಪಷ್ಟ, ನೇರ ಮಾರ್ಗದರ್ಶನವನ್ನು ನೀಡುತ್ತೇನೆ. ಅವರು ಯಾರೇ ಆಗಿರಲಿ, ಎಲ್ಲರಿಗೂ ವಿಶ್ವಾಸಾರ್ಹ ಕಾನೂನು ಬೆಂಬಲ ಲಭ್ಯವಾಗುವಂತೆ ನೋಡಿಕೊಳ್ಳುವುದು ನನ್ನ ಗುರಿಯಾಗಿದೆ.",
-  "empowering"     : "ತ್ವರಿತ, ವಿಶ್ವಾಸಾರ್ಹ ಕಾನೂನು ಸಂಪನ್ಮೂಲಗಳೊಂದಿಗೆ ವಕೀಲರನ್ನು ಸಬಲೀಕರಣಗೊಳಿಸುವುದು.",
-  "iprovide"       : "ಪ್ರಕರಣದ ಉಲ್ಲೇಖಗಳು ಮತ್ತು ಕಾನೂನು ಪೂರ್ವನಿದರ್ಶನಗಳಿಂದ ಹಿಡಿದು ಕಾರ್ಯವಿಧಾನದ ಮಾರ್ಗಸೂಚಿಗಳವರೆಗೆ ಅಗತ್ಯ ಕಾನೂನು ಸಂಪನ್ಮೂಲಗಳಿಗೆ ನಾನು ವಕೀಲರಿಗೆ ತ್ವರಿತ ಮತ್ತು ವಿಶ್ವಾಸಾರ್ಹ ಪ್ರವೇಶವನ್ನು ಒದಗಿಸುತ್ತೇನೆ. ನಿಮ್ಮ ಕೆಲಸವನ್ನು ಸುಗಮಗೊಳಿಸುವುದು ನನ್ನ ಗುರಿಯಾಗಿದೆ, ಇದು ನಿಮ್ಮ ಕಕ್ಷಿದಾರರಿಗೆ ಪರಿಣಾಮಕಾರಿಯಾಗಿ ಬೆಂಬಲ ನೀಡುವತ್ತ ಹೆಚ್ಚು ಗಮನಹರಿಸಲು ಅನುವು ಮಾಡಿಕೊಡುತ್ತದೆ.",
-  "streamlining"   : "ನಿಖರವಾದ ಕಾನೂನು ಭಾಷೆಯೊಂದಿಗೆ ಎಫ್‌ಐಆರ್ ದಾಖಲಾತಿಯನ್ನು ಸುಗಮಗೊಳಿಸುವುದು. ",
-  "iassist"        : "ನಾನು ಪೊಲೀಸ್ ಅಧಿಕಾರಿಗಳಿಗೆ ವೈಯಕ್ತಿಕ ದೂರುಗಳನ್ನು ಎನ್‌ಎಲ್‌ಪಿ ಬಳಸಿಕೊಂಡು ನಿಖರವಾದ ಕಾನೂನು ಭಾಷೆಯಾಗಿ ಪರಿವರ್ತಿಸುವ ಮೂಲಕ, ಎಫ್‌ಐಆರ್ ದಾಖಲಾತಿಯನ್ನು ಸರಳೀಕರಿಸಲು ಮತ್ತು ತ್ವರಿತಗೊಳಿಸಲು ಸಂಬಂಧಿತ ಕಾನೂನುಗಳು ಮತ್ತು ವಿಭಾಗಗಳನ್ನು ಗುರುತಿಸುವ ಮೂಲಕ ಸಹಾಯ ಮಾಡುತ್ತೇನೆ. ಇದು ಎಫ್‌ಐಆರ್ ಕಾನೂನು ಮಾನದಂಡಗಳಿಗೆ ಹೊಂದಿಕೆಯಾಗುವುದನ್ನು ಖಚಿತಪಡಿಸುತ್ತದೆ, ಕಾನೂನು ತಜ್ಞರಿಗೆ ತಕ್ಷಣದ ಪ್ರವೇಶವಿಲ್ಲದಿದ್ದರೂ ಸಹ, ಅಧಿಕಾರಿಗಳು ದೂರುಗಳಿಗೆ ಹೆಚ್ಚು ಪರಿಣಾಮಕಾರಿಯಾಗಿ ಪ್ರತಿಕ್ರಿಯಿಸಲು ಅನುವು ಮಾಡಿಕೊಡುತ್ತದೆ.",
-  "judica"         : "ಜುಡಿಕಾ",
-  "username"       : "ಬಳಕೆದಾರಹೆಸರು",
-  "email"          : "ಇಮೇಲ್",
-  "password"       : "ಪಾಸ್ವರ್ಡ್",
-  "confirmpassword": "ಪಾಸ್‌ವರ್ಡ್ ಅನ್ನು ದೃಢೀಕರಿಸಿ",
-  "citizen"        : "ನಾಗರಿಕ",
-  "police"         : "ಪೊಲೀಸ್",
-  "advocate"       : "ವಕೀಲ",
-  "register"       : "ನೋಂದಣಿ ಮಾಡಿ",
-  "haveanaccount"  : "ಖಾತೆ ಇದೆಯೇ? ಲಾಗಿನ್ ಮಾಡಿ",
-  "forgotpassword" : "ಪಾಸ್ವರ್ಡ್ ಮರೆತಿರಾ",
-  "login"          : "ಲಾಗಿನ್ ಮಾಡಿ",
-  "orcontinuewith" : "ಅಥವಾ ಮುಂದುವರಿಸಿ",
+  "hello": "ನಮಸ್ಕಾರ, ನಾನು ನಿಮ್ಮ ಕಾನೂನು ಸಹಾಯಕ ಜುಡಿಕಾ.",
+  "mymission": "ಪ್ರತಿಯೊಬ್ಬರೂ ಕಾನೂನು ವ್ಯವಸ್ಥೆಯಲ್ಲಿ ಅವರಿಗೆ ಬೇಕಾದ ಬೆಂಬಲವನ್ನು ಪಡೆಯುವುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳುವುದು ನನ್ನ ಮಿಷನ್. ನೀವು ಸಲಹೆ ಬಯಸಿದರೆ, ಜಾಮೀನು ಕುರಿತು ಮಾರ್ಗದರ್ಶನ ಬಯಸಿದರೆ, ಅಥವಾ ಕಾನೂನು ಪರಿಭಾಷೆಯನ್ನು ತ್ವರಿತವಾಗಿ ಅರ್ಥಮಾಡಿಕೊಳ್ಳಬೇಕಾದರೆ, ನಾನು ಇಲ್ಲಿದ್ದೇನೆ.",
+  "getstarted": "ಪ್ರಾರಂಭಿಸಿ",
+  "makinglegal": "ಕಾನೂನು ಬೆಂಬಲವನ್ನು ಸ್ಪಷ್ಟ ಮತ್ತು ಪ್ರವೇಶಿಸಲು ಸುಲಭವಾಗಿಸುವುದು.",
+  "isimplify": "ನಾನು ಸಂಕೀರ್ಣ ಕಾನೂನು ಪರಿಭಾಷೆ ಮತ್ತು ಪ್ರಕ್ರಿಯೆಗಳನ್ನು ಸರಳಗೊಳಿಸುತ್ತೇನೆ, ಸಾಮಾನ್ಯ ಬಳಕೆದಾರರಿಗೆ ಅವರ ಹಕ್ಕುಗಳು ಮತ್ತು ಆಯ್ಕೆಗಳನ್ನು ಅರ್ಥಮಾಡಿಕೊಳ್ಳಲು ಸಹಾಯ ಮಾಡುತ್ತೇನೆ. ಕಾನೂನು ಸಮಸ್ಯೆಯನ್ನು ಎದುರಿಸುತ್ತಿದ್ದರೆ ಅಥವಾ ಜಾಮೀನು ಪ್ರಕ್ರಿಯೆಯನ್ನು ನ್ಯಾವಿಗೇಟ್ ಮಾಡುತ್ತಿದ್ದರೆ, ನಾನು ಸ್ಪಷ್ಟ, ಸರಳ ಮಾರ್ಗದರ್ಶನವನ್ನು ಒದಗಿಸುತ್ತೇನೆ. ನನ್ನ ಗುರಿ ಎಂದರೆ ಪ್ರತಿಯೊಬ್ಬರೂ ವಿಶ್ವಾಸಾರ್ಹ ಕಾನೂನು ಬೆಂಬಲವನ್ನು ಪಡೆಯುವುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳುವುದು, ಅವರು ಯಾರೇ ಆಗಿರಲಿ.",
+  "empowering": "ದ್ರುತ, ವಿಶ್ವಾಸಾರ್ಹ ಕಾನೂನು ಸಂಪನ್ಮೂಲಗಳೊಂದಿಗೆ ವಕೀಲರನ್ನು ಸಶಕ್ತಗೊಳಿಸುವುದು.",
+  "iprovide": "ನಾನು ವಕೀಲರಿಗೆ ಪ್ರಕರಣ ಉಲ್ಲೇಖಗಳು, ಕಾನೂನು ಪೂರ್ವಭಾವಿಗಳು ಮತ್ತು ಕಾರ್ಯವಿಧಾನದ ಮಾರ್ಗಸೂಚಿಗಳಂತಹ ಅಗತ್ಯ ಕಾನೂನು ಸಂಪನ್ಮೂಲಗಳಿಗೆ ವೇಗವಾದ ಮತ್ತು ವಿಶ್ವಾಸಾರ್ಹ ಪ್ರವೇಶವನ್ನು ಒದಗಿಸುತ್ತೇನೆ. ನನ್ನ ಗುರಿ ನಿಮ್ಮ ಕೆಲಸವನ್ನು ಸುಗಮಗೊಳಿಸುವುದು, ನಿಮ್ಮ ಗ್ರಾಹಕರಿಗೆ ಹೆಚ್ಚು ಪರಿಣಾಮಕಾರಿಯಾಗಿ ಬೆಂಬಲ ನೀಡಲು ನಿಮಗೆ ಅವಕಾಶ ನೀಡುವುದು.",
+  "streamlining": "ನಿಖರವಾದ ಕಾನೂನು ಭಾಷೆಯೊಂದಿಗೆ FIR ಫೈಲಿಂಗ್ ಅನ್ನು ಸುಗಮಗೊಳಿಸುವುದು.",
+  "iassist": "ನಾನು ಪೊಲೀಸ್ ಅಧಿಕಾರಿಗಳಿಗೆ NLP ಬಳಸಿ ವ್ಯಕ್ತಿಗತ ದೂರುಗಳನ್ನು ನಿಖರವಾದ ಕಾನೂನು ಭಾಷೆಗೆ ಪರಿವರ್ತಿಸಲು ಸಹಾಯ ಮಾಡುತ್ತೇನೆ, ಸಂಬಂಧಿತ ಕಾನೂನುಗಳು ಮತ್ತು ವಿಭಾಗಗಳನ್ನು ಗುರುತಿಸಿ FIR ಫೈಲಿಂಗ್ ಅನ್ನು ಸರಳಗೊಳಿಸಿ ವೇಗಗೊಳಿಸುತ್ತೇನೆ. ಇದು FIR ಕಾನೂನು ಮಾನದಂಡಗಳೊಂದಿಗೆ ಹೊಂದಿಕೆಯಾಗುವಂತೆ ಖಚಿತಪಡಿಸುತ್ತದೆ, ಪೊಲೀಸ್ ಅಧಿಕಾರಿಗಳು ಕಾನೂನು ತಜ್ಞರ ತಕ್ಷಣದ ಪ್ರವೇಶವಿಲ್ಲದೆ ದೂರುಗಳಿಗೆ ಹೆಚ್ಚು ಪರಿಣಾಮಕಾರಿಯಾಗಿ ಪ್ರತಿಕ್ರಿಯಿಸಲು ಅವಕಾಶ ನೀಡುತ್ತದೆ.",
+  "judica": "ಜುಡಿಕಾ",
+  "username": "ಬಳಕೆದಾರ ಹೆಸರು",
+  "email": "ಇಮೇಲ್",
+  "password": "ಪಾಸ್ವರ್ಡ್",
+  "confirmpassword": "ಪಾಸ್ವರ್ಡ್ ದೃಢೀಕರಿಸಿ",
+  "citizen": "ನಾಗರಿಕ",
+  "police": "ಪೊಲೀಸ್",
+  "advocate": "ವಕೀಲ",
+  "register": "ನೋಂದಾಯಿಸಿ",
+  "haveanaccount": "ಖಾತೆ ಇದೆಯೇ",
+  "forgotpassword": "ಪಾಸ್ವರ್ಡ್ ಮರೆತಿರುವಿರಾ",
+  "login": "ಲಾಗಿನ್",
+  "orcontinuewith": "ಅಥವಾ ಮುಂದುವರಿಸಿ",
   "donthaveaccount": "ಖಾತೆ ಇಲ್ಲವೇ? ಸೈನ್ ಅಪ್ ಮಾಡಿ",
-  "chatbot"        : "ಚಾಟ್‌ಬಾಟ್",
-  "askaquestion"   : "ಪ್ರಶ್ನೆ ಕೇಳಿ",
-  "profile"        : "ಪ್ರೊಫೈಲ್",
-  "name"           : "ಹೆಸರು",
-  "mobilenumber"   : "ಮೊಬೈಲ್ ಸಂಖ್ಯೆ",
-  "dateofbirth"    : "ಹುಟ್ಟಿದ ದಿನಾಂಕ",
-  "notavailable"   : "ಲಭ್ಯವಿಲ್ಲ",
-  "address"        : "ವಿಳಾಸ",
-  "Logout"         : "ಲಾಗ್ಔಟ್",
-  "clicktoupload"  : "ಅಪ್‌ಲೋಡ್ ಮಾಡಲು ಕ್ಲಿಕ್ ಮಾಡಿ",
-  "save"           : "ಉಳಿಸಿ",
-  "cancel"         : "ರದ್ದುಮಾಡಿ",
-  "fir"            : "ಎಫ್‌ಐಆರ್",
-  "generatefir"    : "ಎಫ್‌ಐಆರ್ ರಚಿಸಿ",
-  "viewfir"        : "ಎಫ್‌ಐಆರ್ ವೀಕ್ಷಿಸಿ",
-  "booknumber"     : "ಪುಸ್ತಕ ಸಂಖ್ಯೆ",
-  "formnumber"     : "ಫಾರ್ಮ್ ಸಂಖ್ಯೆ",
-  "policestationame": "ಪೊಲೀಸ್ ಠಾಣೆಯ ಹೆಸರು",
-  "district"       : "ಜಿಲ್ಲೆ",
-  "dhoccurrence"   : "ಘಟನೆಯ ದಿನಾಂಕ/ಗಂಟೆ",
-  "dhreported"     : "ವರದಿ ಮಾಡಿದ ದಿನಾಂಕ/ಗಂಟೆ",
-  "informername"   : "ಮಾಹಿತಿದಾರರ ಹೆಸರು",
-  "descripoffense" : "ಅಪರಾಧದ ವಿವರಣೆ",
-  "placeofoccur"   : "ಸಂಭವಿಸುವ ಸ್ಥಳ",
-  "criminalname"   : "ಕ್ರಿಮಿನಲ್ ಹೆಸರು",
-  "investsteps"    : "ತನಿಖಾ ಹಂತಗಳು",
-  "dispatchtime"   : "ರವಾನೆ ಸಮಯ",
-  "bail"           : "ಜಾಮೀನು",
-  "statute"        : "ಶಾಸನ",
-  "ndps"           : "ಎನ್‌ಡಿಪಿಎಸ್",
-  "scst"           : "ಎಸ್‌ಸಿ ಎಸ್‌ಟಿ ಕಾಯ್ದೆ",
-  "pmla"           : "ಪಿಎಂಎಲ್‌ಎ",
-  "crpc"           : "ಸಿಆರ್‌ಪಿಸಿ",
-  "ipc"            : "ಐಪಿಸಿ",
+  "chatbot": "ಚಾಟ್ಬಾಟ್",
+  "profile": "ಪ್ರೊಫೈಲ್",
+  "name": "ಹೆಸರು",
+  "mobilenumber": "ಮೊಬೈಲ್ ನಂಬರ್",
+  "dateOfBirth": "ಜನ್ಮ ದಿನಾಂಕ",
+  "notavailable": "ಲಭ್ಯವಿಲ್ಲ",
+  "address": "ವಿಳಾಸ",
+  "logout": "ಲಾಗ್ ಔಟ್",
+  "clicktoupload": "ಅಪ್ಲೋಡ್ ಮಾಡಲು ಕ್ಲಿಕ್ ಮಾಡಿ",
+  "save": "ಉಳಿಸಿ",
+  "cancel": "ರದ್ದುಮಾಡಿ",
+  "fir": "FIR",
+  "generatefir": "FIR ಉತ್ಪಾದಿಸಿ",
+  "viewfir": "FIR ವೀಕ್ಷಿಸಿ",
+  "booknumber": "ಪುಸ್ತಕ ಸಂಖ್ಯೆ",
+  "formnumber": "ಫಾರ್ಮ್ ಸಂಖ್ಯೆ",
+  "policestationame": "ಪೊಲೀಸ್ ಸ್ಟೇಷನ್ ಹೆಸರು",
+  "district": "ಜಿಲ್ಲೆ",
+  "dhoccurrence": "ಘಟನೆಯ ದಿನಾಂಕ/ಸಮಯ",
+  "dhreported": "ರಿಪೋರ್ಟ್ ಮಾಡಿದ ದಿನಾಂಕ/ಸಮಯ",
+  "informername": "ಮಾಹಿತಿದಾರರ ಹೆಸರು",
+  "descripoffense": "ಅಪರಾಧದ ವಿವರಣೆ",
+  "placeofoccur": "ಘಟನೆಯ ಸ್ಥಳ",
+  "criminalname": "ಅಪರಾಧಿಯ ಹೆಸರು",
+  "investsteps": "ತನಿಖಾ ಹಂತಗಳು",
+  "dispatchtime": "ಡಿಸ್ಪ್ಯಾಚ್ ಸಮಯ",
+  "nofirsavailable": "ಯಾವುದೇ FIR ಗಳು ಲಭ್ಯವಿಲ್ಲ",
+  "bail": "ಜಾಮೀನು",
+  "statute": "ಕಾನೂನು",
+  "ndps": "NDPS",
+  "scst": "SC ST Act",
+  "pmla": "PMLA",
+  "crpc": "CRPC",
+  "ipc": "IPC",
   "offensecategory": "ಅಪರಾಧ ವರ್ಗ",
-  "crimeschildren" : "ಮಕ್ಕಳ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
-  "offensestate"   : "ರಾಜ್ಯದ ವಿರುದ್ಧದ ಅಪರಾಧ",
+  "crimeschildren": "ಮಕ್ಕಳ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
+  "offensestate": "ರಾಜ್ಯದ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
   "crimesforeigner": "ವಿದೇಶಿಯರ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
-  "crimesscst"     : "ಎಸ್‌ಸಿ ಮತ್ತು ಎಸ್‌ಟಿಗಳ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
-  "cybercrime"     : "ಸೈಬರ್ ಅಪರಾಧ",
+  "crimesscst": "SC ಮತ್ತು ST ಗಳ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
+  "cybercrime": "ಸೈಬರ್ ಅಪರಾಧ",
   "economicoffense": "ಆರ್ಥಿಕ ಅಪರಾಧಗಳು",
-  "crimeswomen"    : "ಮಹಿಳೆಯರ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
-  "penalty"        : "ದಂಡ",
-  "fine"           : "ದಂಡ",
-  "imprisonment"   : "ಸೆರೆವಾಸ",
-  "both"           : "ಎರಡೂ",
-  "imprisonserved" : "ಜೈಲು ಶಿಕ್ಷೆಯ ಅವಧಿ (ವರ್ಷಗಳಲ್ಲಿ)",
-  "riskofescape"   : "ತಪ್ಪಿಸಿಕೊಳ್ಳುವ ಅಪಾಯ",
-  "no"             : "ಇಲ್ಲ",
-  "yes"            : "ಹೌದು",
+  "crimeswomen": "ಮಹಿಳೆಯರ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
+  "penalty": "ದಂಡ",
+  "fine": "ಜುಲ್ಮಾನೆ",
+  "imprisonment": "ಕಾರಾಗೃಹ ಶಿಕ್ಷೆ",
+  "both": "ಎರಡೂ",
+  "imprisonserved": "ಕಾರಾಗೃಹ ಶಿಕ್ಷೆಯ ಅವಧಿ (ವರ್ಷಗಳಲ್ಲಿ)",
+  "riskofescape": "ಪಲಾಯನದ ಅಪಾಯ",
+  "no": "ಇಲ್ಲ",
+  "yes": "ಹೌದು",
   "riskofinfluence": "ಪ್ರಭಾವದ ಅಪಾಯ",
-  "suretybond"     : "ಜಾಮೀನು ಬಾಂಡ್ ಅಗತ್ಯವಿದೆ",
-  "personalbond"   : "ವೈಯಕ್ತಿಕ ಬಾಂಡ್ ಅಗತ್ಯವಿದೆ",
-  "finesapplicable": "ಅನ್ವಯವಾಗುವ ದಂಡಗಳು",
-  "servedhalfterm" : "ಅರ್ಧಾವಧಿ ಸೇವೆ ಸಲ್ಲಿಸಲಾಗಿದೆ",
-  "riskscore"      : "ಅಪಾಯದ ಸ್ಕೋರ್",
-  "penaltySeverity":"ದಂಡದ ತೀವ್ರತೆ",
-  "submit"         : "ಸಲ್ಲಿಸಿ"
+  "suretybond": "ಜಾಮೀನು ಬಾಂಡ್ ಅಗತ್ಯವಿದೆ",
+  "personalbond": "ವೈಯಕ್ತಿಕ ಬಾಂಡ್ ಅಗತ್ಯವಿದೆ",
+  "finesapplicable": "ಜುಲ್ಮಾನೆ ಅನ್ವಯಿಸುತ್ತದೆ",
+  "servedhalfterm": "ಅರ್ಧ ಅವಧಿ ಪೂರೈಸಿದೆ",
+  "riskscore": "ಅಪಾಯ ಸ್ಕೋರ್",
+  "penaltySeverity": "ದಂಡದ ತೀವ್ರತೆ",
+  "submit": "ಸಲ್ಲಿಸು",
+  "please": "ದಯವಿಟ್ಟು ಇಮೇಲ್ ವಿಳಾಸವನ್ನು ನಮೂದಿಸಿ.",
+  "resetpassword": "ಪಾಸ್ವರ್ಡ್ ರೀಸೆಟ್ ಇಮೇಲ್ ಕಳುಹಿಸಲಾಗಿದೆ! ನಿಮ್ಮ ಇನ್ಬಾಕ್ಸ್ ಪರಿಶೀಲಿಸಿ.",
+  "error": "ದೋಷ ಸಂಭವಿಸಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+  "enteremail": "ನಿಮ್ಮ ಇಮೇಲ್ ನಮೂದಿಸಿ",
+  "repassword": "ಪಾಸ್ವರ್ಡ್ ರೀಸೆಟ್ ಮಾಡಿ →",
+  "cannotemail": "ಇಮೇಲ್ ಖಾಲಿ ಇರಬಾರದು",
+  "cannotpasswort": "ಪಾಸ್ವರ್ಡ್ ಖಾಲಿ ಇರಬಾರದು",
+  "usernotfound": "ಬಳಕೆದಾರ ಪಾತ್ರ ಕಂಡುಬಂದಿಲ್ಲ.",
+  "pleasewait": "ದಯವಿಟ್ಟು ಕಾಯಿರಿ...",
+  "continu": "ಅಥವಾ ಮುಂದುವರಿಸಿ",
+  "account": "ಖಾತೆ ಇಲ್ಲವೇ?",
+  "sign": "ಸೈನ್ ಅಪ್ ಮಾಡಿ",
+  "selectLanguage": "ಭಾಷೆ ಆಯ್ಕೆಮಾಡಿ",
+  "changessaved": "ಬದಲಾವಣೆಗಳನ್ನು ಯಶಸ್ವಿಯಾಗಿ ಉಳಿಸಲಾಗಿದೆ!",
+  "edittitle": "$title ಸಂಪಾದಿಸಿ",
+  "enternewtitle": "ಹೊಸ $title ನಮೂದಿಸಿ",
+  "passworddont": "ಪಾಸ್ವರ್ಡ್ ಗಳು ಹೊಂದಿಕೆಯಾಗುತ್ತಿಲ್ಲ!",
+  "regsuccess": "ನೋಂದಣಿ ಯಶಸ್ವಿಯಾಗಿದೆ!",
+  "weakPassword": "ದುರ್ಬಲ-ಪಾಸ್ವರ್ಡ್",
+  "passwordtooweak": "ಒದಗಿಸಿದ ಪಾಸ್ವರ್ಡ್ ತುಂಬಾ ದುರ್ಬಲವಾಗಿದೆ.",
+  "emailalreadyinuse": "ಇಮೇಲ್-ಈಗಾಗಲೇ-ಬಳಕೆಯಲ್ಲಿದೆ",
+  "alreadyexist": "ಆ ಇಮೇಲ್ ಗಾಗಿ ಖಾತೆ ಈಗಾಗಲೇ ಅಸ್ತಿತ್ವದಲ್ಲಿದೆ.",
+  "invalidemail": "ಅಮಾನ್ಯ-ಇಮೇಲ್",
+  "notvalid": "ಒದಗಿಸಿದ ಇಮೇಲ್ ಅಮಾನ್ಯವಾಗಿದೆ.",
+  "error": "ದೋಷ ಸಂಭವಿಸಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+  "users": "ಬಳಕೆದಾರರು",
+  "role": "ಪಾತ್ರ",
+  "judica": "ಜುಡಿಕಾ",
+  "selectrole": "ಪಾತ್ರ ಆಯ್ಕೆಮಾಡಿ",
+  "chathistory": "ಚಾಟ್ ಇತಿಹಾಸ",
+  "question": "ಪ್ರಶ್ನೆ",
+  "answer": "ಉತ್ತರ",
+  "errore": "ದೋಷ: $e",
+  "askaquestion": "ಪ್ರಶ್ನೆ ಕೇಳಿ...",
+  "delete": "ಅಳಿಸಿ",
+  "share": "ಹಂಚಿಕೊಳ್ಳಿ",
+  "deletemsg": "ಸಂದೇಶ ಅಳಿಸಿ",
+  "policecommunity": "ಪೊಲೀಸ್ ಸಮುದಾಯ ತೊಡಗಿಸಿಕೊಳ್ಳುವಿಕೆ",
+  "pleaseentertitle": "ದಯವಿಟ್ಟು ಶೀರ್ಷಿಕೆ ಮತ್ತು ಪ್ರಶ್ನೆಗಳನ್ನು ನಮೂದಿಸಿ",
+  "surveycreatedsuccessfully": "ಸರ್ವೇ ಯಶಸ್ವಿಯಾಗಿ ರಚಿಸಲಾಗಿದೆ",
+  "plscmpltannouncement": "ದಯವಿಟ್ಟು ಪ್ರಕಟಣೆಯ ವಿವರಗಳನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ",
+  "announcementcreatedsuccessfully": "ಪ್ರಕಟಣೆ ಯಶಸ್ವಿಯಾಗಿ ರಚಿಸಲಾಗಿದೆ",
+  "policecommunity": "ಪೊಲೀಸ್ ಸಮುದಾಯ ತೊಡಗಿಸಿಕೊಳ್ಳುವಿಕೆ",
+  "survey": "ಸರ್ವೇ",
+  "anunce": "ಪ್ರಕಟಣೆ",
+  "review": "ಪರಿಶೀಲನೆ",
+  "createsurvey": "ಸರ್ವೇ ರಚಿಸಿ",
+  "surveytitle": "ಸರ್ವೇ ಶೀರ್ಷಿಕೆ",
+  "entersurveyquestion": "ಸರ್ವೇ ಪ್ರಶ್ನೆ ನಮೂದಿಸಿ",
+  "entersurveyoption": "ಸರ್ವೇ ಆಯ್ಕೆ ನಮೂದಿಸಿ",
+  "addoption": "ಆಯ್ಕೆ ಸೇರಿಸಿ",
+  "addquestion": "ಪ್ರಶ್ನೆ ಸೇರಿಸಿ",
+  "sub": "ಸರ್ವೇ ಸಲ್ಲಿಸಿ",
+  "reviewsurvey": "ಸರ್ವೇ ಪರಿಶೀಲಿಸಿ",
+  "reviewyoursurvey": "ನಿಮ್ಮ ಸರ್ವೇ ಪರಿಶೀಲಿಸಿ",
+  "options": "ಆಯ್ಕೆಗಳು",
+  "submitsurvey": "ಸರ್ವೇ ಸಲ್ಲಿಸಿ",
+  "editsurvey": "ಸರ್ವೇ ಸಂಪಾದಿಸಿ",
+  "showresponses": "ಪ್ರತಿಕ್ರಿಯೆಗಳನ್ನು ತೋರಿಸಿ",
+  "createpublicannouncement": "ಸಾರ್ವಜನಿಕ ಪ್ರಕಟಣೆ ರಚಿಸಿ",
+  "title": "ಶೀರ್ಷಿಕೆ",
+  "description": "ವಿವರಣೆ",
+  "scheme": "ಯೋಜನೆ (ಅನ್ವಯಿಸಿದರೆ)",
+  "instruction": "ಸೂಚನೆಗಳು",
+  "submitannouncement": "ಪ್ರಕಟಣೆ ಸಲ್ಲಿಸಿ",
+  "surveyresponses": "ಸರ್ವೇ ಪ್ರತಿಕ್ರಿಯೆಗಳು",
+  "noresponseyet": "ಇನ್ನೂ ಯಾವುದೇ ಪ್ರತಿಕ್ರಿಯೆಗಳಿಲ್ಲ.",
+  "registrationlink": "ನೋಂದಣಿ ಲಿಂಕ್",
+  "viewfirpdf": "FIR PDF ವೀಕ್ಷಿಸಿ",
+  "active": "ಸಕ್ರಿಯ ದೂರುಗಳು",
+  "resolvedcomplaints": "ಪರಿಹರಿಸಿದ ದೂರುಗಳು",
+  "all": "ಎಲ್ಲಾ",
+  "high": "ಹೆಚ್ಚು",
+  "medium": "ಮಧ್ಯಮ",
+  "low": "ಕಡಿಮೆ",
+  "fir": "FIR",
+  "main": "ಮುಖ್ಯ",
+  "create": "ರಚಿಸಿ",
+  "id": "ಸರ್ವೇ ID",
+  "no": "ಯಾವುದೇ ಸರ್ವೇ ಪ್ರತಿಕ್ರಿಯೆಗಳು ಲಭ್ಯವಿಲ್ಲ.",
+  "ndps": "NDPS",
+  "scst": "SCST Act",
+  "pmla": "PMLA",
+  "crpc": "CrPC",
+  "ipc": "IPC",
+  "children": "ಮಕ್ಕಳ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
+  "state": "ರಾಜ್ಯದ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
+  "foreigner": "ವಿದೇಶಿಯರ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
+  "crimeScSt": "SC ಮತ್ತು ST ಗಳ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
+  "cyber": "ಸೈಬರ್ ಅಪರಾಧ",
+  "economic": "ಆರ್ಥಿಕ ಅಪರಾಧ",
+  "women": "ಮಹಿಳೆಯರ ವಿರುದ್ಧದ ಅಪರಾಧಗಳು",
+  "fine": "ಪರಿಶೀಲನೆ",
+  "both": "ಎರಡೂ",
+  "imprisonment": "ಕಾರಾಗೃಹ ಶಿಕ್ಷೆ",
+  "statute": "ಕಾನೂನು",
+  "offense": "ಅಪರಾಧ ವರ್ಗ",
+  "penalty": "ದಂಡ",
+  "imprisonment": "ಕಾರಾಗೃಹ ಶಿಕ್ಷೆ ಅವಧಿ (ವರ್ಷಗಳಲ್ಲಿ)",
+  "escape": "ಪಲಾಯನದ ಅಪಾಯ",
+  "influencer": "ಪ್ರಭಾವದ ಅಪಾಯ",
+  "surety": "ಜಾಮೀನು ಬಾಂಡ್ ಅಗತ್ಯವಿದೆ",
+  "personal": "ವೈಯಕ್ತಿಕ ಬಾಂಡ್ ಅಗತ್ಯವಿದೆ",
+  "fines": "ಜುಲ್ಮಾನೆ ಅನ್ವಯಿಸುತ್ತದೆ",
+  "served": "ಅರ್ಧ ಅವಧಿ ಪೂರೈಸಿದೆ",
+  "riskScore": "ಅಪಾಯ ಸ್ಕೋರ್",
+  "severity": "ದಂಡದ ತೀವ್ರತೆ",
+  "selectlabel": "ದಯವಿಟ್ಟು $label ಆಯ್ಕೆಮಾಡಿ",
+  "rror": "ದೋಷ",
+  "granted": "ಜಾಮೀನು ನೀಡಲಾಗಿದೆ",
+  "denied": "ಜಾಮೀನು ನಿರಾಕರಿಸಲಾಗಿದೆ",
+  "ok": "ಸರಿ",
+  "fyn": "ಜುಲ್ಮಾನೆ",
+  "oth": "ಎರಡೂ",
+  "imprison": "ಕಾರಾಗೃಹ ಶಿಕ್ಷೆ",
+  "microphone": "ಮೈಕ್ರೋಫೋನ್ ಅನ್ನು ಟ್ಯಾಪ್ ಮಾಡಿ ಪ್ರಾರಂಭಿಸಲು",
+  "speech": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್ ಲಭ್ಯವಿಲ್ಲ.",
+  "deletemsg": "ಸಂದೇಶ ಅಳಿಸಿ",
+  "share": "ಹಂಚಿಕೊಳ್ಳಿ",
+  "askquestion": "ಪ್ರಶ್ನೆ ಕೇಳಿ...",
+  "failmsg": "ಸಂದೇಶ ಕಳುಹಿಸಲು ವಿಫಲವಾಗಿದೆ.",
+  "nomsg": "ಇನ್ನೂ ಯಾವುದೇ ಸಂದೇಶಗಳಿಲ್ಲ.",
+  "writemsg": "ಸಂದೇಶ ಬರೆಯಿರಿ...",
+  "selectadvocate": "ವಕೀಲರನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+  "noadvocate": "ಯಾವುದೇ ವಕೀಲರು ಲಭ್ಯವಿಲ್ಲ.",
+  "low": "ಕಡಿಮೆ",
+  "pending": "ಬಾಕಿ",
+  "cloudinary": "ಕ್ಲೌಡಿನಾರಿಗೆ ಫೈಲ್ ಅಪ್ಲೋಡ್ ಮಾಡಲು ವಿಫಲವಾಗಿದೆ.",
+  "complaintsub": "ದೂರು ಯಶಸ್ವಿಯಾಗಿ ಸಲ್ಲಿಸಲಾಗಿದೆ!",
+  "filecom": "ದೂರು ದಾಖಲಿಸಿ",
+  "incidentdesc": "ಘಟನೆಯ ವಿವರಣೆ",
+  "providedesc": "ದಯವಿಟ್ಟು ಘಟನೆಯ ವಿವರಣೆಯನ್ನು ನೀಡಿ.",
+  "prior": "ಆದ್ಯತೆ",
+  "low": "ಕಡಿಮೆ",
+  "medium": "ಮಧ್ಯಮ",
+  "high": "ಹೆಚ್ಚು",
+  "usecurrentloc": "ಪ್ರಸ್ತುತ ಸ್ಥಳವನ್ನು ಬಳಸಿ",
+  "attach": "ಮೀಡಿಯಾ/ದಾಖಲೆ ಲಗತ್ತಿಸಿ",
+  "submitcomp": "ದೂರು ಸಲ್ಲಿಸಿ",
+  "governmentscheme": "ಸರ್ಕಾರಿ ಯೋಜನೆಗಳು ಮತ್ತು ಕಾನೂನು ಹಕ್ಕುಗಳು",
+  "surveys": "ಸರ್ವೇಗಳು",
+  "announcements": "ಪ್ರಕಟಣೆಗಳು",
+  "nosurveys": "ಯಾವುದೇ ಸರ್ವೇಗಳು ಲಭ್ಯವಿಲ್ಲ.",
+  "untitledsurvey": "ಶೀರ್ಷಿಕೆಯಿಲ್ಲದ ಸರ್ವೇ",
+  "sursub": "ಸರ್ವೇ ಯಶಸ್ವಿಯಾಗಿ ಸಲ್ಲಿಸಲಾಗಿದೆ",
+  "surdetails": "ಸರ್ವೇ ವಿವರಗಳು",
+  "alreadyans": "ನೀವು ಈಗಾಗಲೇ ಈ ಸರ್ವೇಗೆ ಉತ್ತರಿಸಿದ್ದೀರಿ.",
+  "subsurvey": "ಸರ್ವೇ ಸಲ್ಲಿಸಿ",
+  "noannoun": "ಯಾವುದೇ ಪ್ರಕಟಣೆಗಳು ಲಭ್ಯವಿಲ್ಲ.",
+  "untitledannoun": "ಶೀರ್ಷಿಕೆಯಿಲ್ಲದ ಪ್ರಕಟಣೆ",
+  "announdet": "ಪ್ರಕಟಣೆ ವಿವರಗಳು",
+  "untscheme": "ಶೀರ್ಷಿಕೆಯಿಲ್ಲದ ಯೋಜನೆ",
+  "nodescAvl": "ವಿವರಣೆ ಲಭ್ಯವಿಲ್ಲ.",
+  "instructions": "ಸೂಚನೆಗಳು:",
+  "noinst": "ಯಾವುದೇ ಸೂಚನೆಗಳು ಲಭ್ಯವಿಲ್ಲ.",
+  "unableopen": "ನೋಂದಣಿ ಲಿಂಕ್ ತೆರೆಯಲು ಸಾಧ್ಯವಿಲ್ಲ.",
+  "regScheme": "ಯೋಜನೆಗೆ ನೋಂದಾಯಿಸಿ",
+  "nouserName": "ಬಳಕೆದಾರ ಹೆಸರು ಲಭ್ಯವಿಲ್ಲ.",
+  "chtbt": "ಚಾಟ್ಬಾಟ್",
+  "prfl": "ಪ್ರೊಫೈಲ್",
+  "fil": "ಫೈಲಿಂಗ್",
+  "cht": "ಚಾಟ್"
 }
