--- a/lib/l10n/app_te.arb
+++ b/lib/l10n/app_te.arb
@@ -1,83 +1,244 @@
 {
-  "hello"          : "హలో, నేను జుడికా మీ లీగల్ అసిస్టెంట్.",
-  "mymission"      : "న్యాయ వ్యవస్థలో ప్రతి ఒక్కరికి అవసరమైన మద్దతు లభించేలా చూడడమే నా లక్ష్యం. మీరు సలహా కోరినా, బెయిల్‌పై మార్గదర్శకత్వం కోసం చూస్తున్నా లేదా చట్టపరమైన నిబంధనలపై త్వరిత అవగాహన అవసరమైనా, నేను సహాయం చేయడానికి ఇక్కడ ఉన్నాను.",
+  "hello"          : "హలో, నేను జూడికా, మీ చట్ట సహాయకుడు.",
+  "mymission"      : "నా ప్రేరణ ప్రతి ఒక్కరికీ చట్టవ్యవస్థలో అవసరమైన మద్దతు అందించడం. మీరు సలహా కోరుతున్నారా, బెయిల్ పై మార్గదర్శనం అవసరమా, లేదా చట్ట పదాలపై తేలికపాటి అర్థం కావాలా, నేను ఇక్కడ సహాయం అందించడానికి ఉన్నాను.",
   "getstarted"     : "ప్రారంభించండి",
-  "makinglegal"    : "లీగల్ సపోర్ట్ లీగల్ సపోర్టును క్లియర్ మరియు యాక్సెస్బుల్ చేయడం.",
-  "isimplify"      : "నేను సంక్లిష్టమైన చట్టపరమైన నిబంధనలు మరియు ప్రక్రియలను సులభతరం చేస్తాను, సాధారణ వినియోగదారులకు వారి హక్కులు మరియు ఎంపికలను అర్థం చేసుకోవడంలో సహాయపడతాను. చట్టపరమైన సమస్యను ఎదుర్కొంటున్నా లేదా బెయిల్ ప్రక్రియను నావిగేట్ చేస్తున్నప్పుడు, నేను స్పష్టమైన, సూటిగా మార్గదర్శకత్వాన్ని అందిస్తాను. ప్రతి ఒక్కరికీ విశ్వసనీయమైన చట్టపరమైన మద్దతు ఉండేలా చూడడమే నా లక్ష్యం. వారు ఎవరో.",
-  "empowering"     : "త్వరిత, విశ్వసనీయ న్యాయ వనరులతో న్యాయవాదులకు సాధికారత.",
-  "iprovide"       : "కేస్ రిఫరెన్స్‌లు మరియు చట్టపరమైన పూర్వాపరాల నుండి విధానపరమైన మార్గదర్శకాల వరకు అవసరమైన చట్టపరమైన వనరులకు నేను న్యాయవాదులకు వేగవంతమైన మరియు విశ్వసనీయమైన ప్రాప్యతను అందిస్తాను. మీ క్లయింట్‌లకు సమర్ధవంతంగా మద్దతు ఇవ్వడంపై మీరు మరింత దృష్టి కేంద్రీకరించడానికి మీ పనిని క్రమబద్ధీకరించడం నా లక్ష్యం.",
-  "streamlining"   : "ఖచ్చితమైన చట్టపరమైన భాషతో ఎఫ్ఐఆర్ దాఖలును క్రమబద్ధీకరించడం.",
-  "iassist"        : "నేను ఎన్‌ఎల్‌పిని ఉపయోగించి వ్యక్తిగత ఫిర్యాదులను ఖచ్చితమైన చట్టపరమైన భాషగా మార్చడం ద్వారా పోలీసు అధికారులకు సహాయం చేస్తాను, ఎఫ్‌ఐఆర్ దాఖలును సులభతరం చేయడానికి మరియు వేగవంతం చేయడానికి సంబంధిత చట్టాలు మరియు సెక్షన్‌లను గుర్తించడం. ఇది ఎఫ్‌ఐఆర్ చట్టపరమైన ప్రమాణాలకు అనుగుణంగా ఉందని నిర్ధారిస్తుంది, ఫిర్యాదులకు తక్షణ ప్రాప్యత లేకుండా కూడా అధికారులు మరింత సమర్థవంతంగా స్పందించేలా చేస్తుంది. న్యాయ నిపుణుడికి.",
-  "judica"         : "జుడికా",
-  "username"       : "వినియోగదారు పేరు",
+  "makinglegal"    : "చట్ట సహాయం ను చట్ట సహాయం గా స్పష్టంగా మరియు అందుబాటులోకి చేయడం.",
+  "isimplify"      : "నేను క్లిష్టమైన చట్ట పదాలు మరియు ప్రక్రియలను సులభతరం చేస్తాను, సాధారణ వినియోగదారులు వారి హక్కులు మరియు ఎంపికలను అర్థం చేసుకోవడానికి సహాయం చేస్తాను. ఒక చట్ట సమస్య ఎదుర్కొంటున్నప్పుడు లేదా బెయిల్ ప్రక్రియను అర్థం చేసుకోవడంలో, నేను స్పష్టమైన, తేలికైన మార్గదర్శనం అందిస్తాను.",
+  "empowering"     : "వకీల్ లకు వేగవంతమైన, నమ్మదగిన చట్ట వనరులు అందించడం.",
+  "iprovide"       : "నేను వకీలలకు కేసు సూచనలు, చట్ట నిబంధనలను, ప్రక్రియ మార్గదర్శకాలను వేగంగా మరియు నమ్మదగిన రీతిలో అందిస్తాను.",
+  "streamlining"   : "FIR దాఖలు చేయడాన్ని సరైన చట్ట భాషతో వేగవంతం చేయడం.",
+  "iassist"        : "నేను పోలీసు అధికారులను వ్యక్తిగత ఫిర్యాదులను చట్ట ప్రమాణాలతో సమ్మతి చెందేలా మార్చడం, సంబంధిత చట్టాలు మరియు విభాగాలను గుర్తించడం ద్వారా FIR దాఖలు చేయడాన్ని సులభతరం చేస్తాను.",
+  "judica"         : "జూడికా",
+  "username"       : "వినియోగదారునామ",
   "email"          : "ఇమెయిల్",
   "password"       : "పాస్‌వర్డ్",
-  "confirmpassword": "పాస్‌వర్డ్‌ను నిర్ధారించండి",
+  "confirmpassword": "పాస్‌వర్డ్ నిర్ధారించండి",
   "citizen"        : "పౌరుడు",
-  "police"         : "పోలీస్",
-  "advocate"       : "న్యాయవాది",
-  "register"       : "రిజిస్టర్",
-  "haveanaccount"  : "ఖాతా ఉందా? లాగిన్ అవ్వండి",
-  "forgotpassword" : "పాస్‌వర్డ్ మర్చిపోయాను",
+  "police"         : "పోలీసు",
+  "advocate"       : "వకీల్",
+  "register"       : "రెజిస్టర్ చేయండి",
+  "haveanaccount"  : "మీకు ఖాతా ఉన్నదా?",
+  "forgotpassword" : "పాస్‌వర్డ్ మర్చిపోయారా?",
   "login"          : "లాగిన్",
-  "orcontinuewith" : "లేదా కొనసాగించండి",
-  "donthaveaccount": "ఖాతా లేదా? సైన్ అప్ చేయండి",
+  "orcontinuewith" : "లేదా వీటితో కొనసాగించండి",
+  "donthaveaccount": "ఖాతా లేదు? సైన్ అప్ చేయండి",
   "chatbot"        : "చాట్‌బాట్",
-  "askaquestion"   : "ఒక ప్రశ్న అడగండి",
   "profile"        : "ప్రొఫైల్",
   "name"           : "పేరు",
   "mobilenumber"   : "మొబైల్ నంబర్",
-  "dateofbirth"    : "పుట్టిన తేదీ",
-  "notavailable"   : "అందుబాటులో లేదు",
+  "dateOfBirth"    : "పుట్టిన తేదీ",
+  "notavailable"   : "లభ్యంలేదు",
   "address"        : "చిరునామా",
-  "Logout"         : "లాగ్అవుట్",
+  "logout"         : "లాగౌట్",
   "clicktoupload"  : "అప్‌లోడ్ చేయడానికి క్లిక్ చేయండి",
   "save"           : "సేవ్",
-  "cancel"         : "రద్దు చేయి",
-  "fir"            : "ఎఫ్ఐఆర్",
-  "generatefir"    : "ఎఫ్ఐఆర్ రూపొందించండి",
-  "viewfir"        : "ఎఫ్ఐఆర్ చూడండి",
-  "booknumber"     : "పుస్తక సంఖ్య",
-  "formnumber"     : "ఫారం నంబర్",
-  "policestationame": "పోలీస్ స్టేషన్ పేరు",
+  "cancel"         : "రద్దు చేయండి",
+  "fir"            : "FIR",
+  "generatefir"    : "FIR రూపొందించండి",
+  "viewfir"        : "FIR చూడండి",
+  "booknumber"     : "బుక్ నంబర్",
+  "formnumber"     : "ఫారమ్ నంబర్",
+  "policestationame": "పోలీసు స్టేషన్ పేరు",
   "district"       : "జిల్లా",
-  "dhoccurrence"   : "సంభవించిన తేదీ/గంట",
-  "dhreported"     : "నివేదించబడిన తేదీ/గంట",
-  "informername"   : "ఇన్ఫార్మర్ పేరు",
-  "descripoffense" : "నేరం యొక్క వివరణ",
-  "placeofoccur"   : "సంభవించిన ప్రదేశం",
-  "criminalname"   : "నేరస్థుడి పేరు",
-  "investsteps"    : "దర్యాప్తు దశలు",
-  "dispatchtime"   : "పంపిణీ సమయం",
+  "dhoccurrence"   : "హఓ/సమయం జరిగినది",
+  "dhreported"     : "నమోదు చేసిన హఓ/సమయం",
+  "informername"   : "సూచనదారుని పేరు",
+  "descripoffense" : "అపరాధ వివరణ",
+  "placeofoccur"   : "జరిగిన స్థలం",
+  "criminalname"   : "క్రిమినల్ పేరు",
+  "investsteps"    : "పరిశోధన దశలు",
+  "dispatchtime"   : "డిస్పాచ్ సమయం",
+  "nofirsavailable":"ఇప్పటికే ఏ FIR లు లేవు",
   "bail"           : "బెయిల్",
-  "statute"        : "శాసనం",
-  "ndps"           : "ఎన్‌డిపిఎస్",
-  "scst"           : "ఎస్సీ ఎస్టీ చట్టం",
-  "pmla"           : "పిఎంఎల్‌ఎ",
-  "crpc"           : "సిఆర్‌పిసి",
-  "ipc"            : "ఐపిసి",
-  "offensecategory": "నేర వర్గం",
+  "statute"        : "చట్టం",
+  "ndps"           : "NDPS",
+  "scst"           : "SC ST చట్టం",
+  "pmla"           : "PMLA",
+  "crpc"           : "CRPC",
+  "ipc"            : "IPC",
+  "offensecategory": "అపరాధ వర్గం",
   "crimeschildren" : "పిల్లలపై నేరాలు",
-  "offensestate"   : "రాష్ట్రానికి వ్యతిరేకంగా నేరం",
+  "offensestate"   : "రాజ్యానికి వ్యతిరేక నేరాలు",
   "crimesforeigner": "విదేశీయులపై నేరాలు",
-  "crimesscst"     : "ఎస్సీలు మరియు ఎస్టీలపై నేరాలు",
+  "crimesscst"     : "SCs మరియు STs పై నేరాలు",
   "cybercrime"     : "సైబర్ క్రైమ్",
   "economicoffense": "ఆర్థిక నేరాలు",
-  "crimeswomen"    : "మహిళలపై నేరాలు",
-  "penalty"        : "జరిమానా",
-  "fine"           : "బాగుంది",
-  "imprisonment"   : "జైలు శిక్ష",
-  "both"           : "రెండూ",
-  "imprisonserved" : "జైలు శిక్ష అనుభవించిన వ్యవధి (సంవత్సరాలలో)",
-  "riskofescape"   : "తప్పించుకునే ప్రమాదం",
-  "no"             : "లేదు",
+  "crimeswomen"    : "స్త్రీలపై నేరాలు",
+  "penalty"        : "శిక్ష",
+  "fine"           : "వచ్చిన వసూలు",
+  "imprisonment"   : "కరికాలం",
+  "both"           : "రెండు",
+  "imprisonserved" : "కరిందిన శిక్ష (సంవత్సరాల్లో)",
+  "riskofescape"   : "పొయెను బారినపాలు",
+  "no"             : "కాదు",
   "yes"            : "అవును",
-  "riskofinfluence": "ప్రభావ ప్రమాదం",
-  "suretybond"     : "ష్యూరిటీ బాండ్ అవసరం",
-  "personalbond"   : "వ్యక్తిగత బాండ్ అవసరం",
-  "finesapplicable": "వర్తించేది మంచిది",
-  "servedhalfterm" : "అర్ధ కాలానికి పనిచేశారు",
-  "riskscore"      : "రిస్క్ స్కోరు",
-  "penaltySeverity": "శిక్ష తీవ్రత",
-  "submit"         : "సమర్పించు"
+  "riskofinfluence": "ప్రభావం కారణంగా ప్రమాదం",
+  "suretybond"     : "భరోసా బాండు అవసరం",
+  "personalbond"   : "వ్యక్తిగత బాండు అవసరం",
+  "finesapplicable": "వసూళ్లు వర్తించు",
+  "servedhalfterm" : "అర్థమొత్తం కాలం సేవ్",
+  "riskscore"      : "ప్రమాదం స్కోరు",
+  "penaltySeverity":"శిక్ష తీవ్రత",
+  "submit"         : "సమర్పించు",
+  "please"         :"దయచేసి ఇమెయిల్ అడ్రస్ నమోదు చేయండి.",
+  "resetpassword"  :"పాస్‌వర్డ్ రీసెట్ ఈమెయిల్ పంపబడింది! మీ ఇన్‌బాక్స్‌ని తనిఖీ చేయండి.",
+  "error"          :"ఒక తప్పు సంభవించింది. దయచేసి మళ్లీ ప్రయత్నించండి.",
+  "enteremail"     :"మీ ఇమెయిల్ నమోదు చేయండి",
+  "repassword"     :"పాస్‌వర్డ్ రీసెట్ చేయండి →",
+  "cannotemail"    :"ఇమెయిల్ ఖాళీగా ఉండకూడదు",
+  "cannotpasswort" :"పాస్‌వర్డ్ ఖాళీగా ఉండకూడదు",
+  "usernotfound"   :"వినియోగదారు పాత్ర కనుగొనబడలేదు.",
+  "pleasewait"     :"దయచేసి వేచి ఉండండి...",
+  "continu"       :"లేదా కొనసాగించండి",
+  "account"        :"మీకు ఖాతా లేదు?",
+  "sign"           :"సైన్ అప్",
+  "selectLanguage" :"భాష ఎంచుకోండి",
+  "changessaved"   : "మార్పులు విజయవంతంగా సేవ్ చేయబడ్డాయి!",
+  "edittitle"      : "ఎడిట్ $title",
+  "enternewtitle"  : "కొత్త $title నమోదు చేయండి",
+  "passworddont"  :"పాస్‌వర్డ్‌లు సరిపోలవు!",
+  "regsuccess"     :"రిజిస్ట్రేషన్ విజయవంతంగా జరిగింది!",
+  "weakPassword"   :"బలహీనమైన పాస్‌వర్డ్",
+  "passwordtooweak":"ప్రత్యక్షించబడిన పాస్‌వర్డ్ బలహీనమైనది.",
+  "emailalreadyinuse": "ఈ ఇమెయిల్ ఇప్పటికే ఉపయోగంలో ఉంది.",
+  "alreadyexist"   : "ఆ ఇమెయిల్ తో ఖాతా ఇప్పటికే ఉంది.",
+  "invalidemail"   :"తప్పు ఇమెయిల్",
+  "notvalid"       :"ఇమెయిల్ చెల్లదేమో.",
+  "error"          :"ఒక తప్పు సంభవించింది. దయచేసి మళ్లీ ప్రయత్నించండి.",
+  "users"          : "వినియోగదారులు",
+  "role"           : "పాత్ర",
+  "judica"         :"జూడికా",
+  "selectrole"       :"పాత్ర ఎంచుకోండి",
+  "chathistory"      :"చాట్ చరిత్ర",
+  "question"         :"ప్రశ్న",
+  "answer"           :"సమాధానం",
+  "errore"           :"తప్పు: $e",
+  "askaquestion"     :"ప్రశ్న అడగండి...",
+  "delete"           :"తొలగించు",
+  "share"            :"పంచుకోండి",
+  "deletemsg":       "సందేశాన్ని తొలగించండి",
+  "policecommunity"  :"పోలీసు కమ్యూనిటీ ఎంగేజ్‌మెంట్",
+  "pleaseentertitle" :"దయచేసి శీర్షిక మరియు ప్రశ్నలను నమోదు చేయండి",
+  "surveycreatedsuccessfully":"సర్వే విజయవంతంగా సృష్టించబడింది",
+  "plscmpltannouncement":"దయచేసి ప్రకటన వివరాలను పూర్తి చేయండి",
+  "announcementcreatedsuccessfully":"ప్రకటన విజయవంతంగా సృష్టించబడింది",
+  "survey": "సర్వే",
+  "anunce": "ప్రకటన",
+  "review": "విమర్శ",
+  "createsurvey"      :"సర్వే సృష్టించండి",
+  "surveytitle"       :"సర్వే శీర్షిక",
+  "entersurveyquestion":"సర్వే ప్రశ్నను నమోదు చేయండి",
+  "entersurveyoption":"సర్వే ఎంపికను నమోదు చేయండి",
+  "addoption":"ఎంపికను జోడించండి",
+  "addquestion":"ప్రశ్నను జోడించండి",
+  "sub": "సర్వే సమర్పించు",
+  "reviewsurvey":"సర్వే సమీక్షించండి",
+  "reviewyoursurvey":"మీ సర్వే సమీక్షించండి",
+  "options":"ఎంపికలు",
+  "submitsurvey":"సర్వే సమర్పించండి",
+  "editsurvey":"సర్వే సవరించు",
+  "showresponses":"ప్రతిస్పందనలను చూపించు",
+  "createpublicannouncement":"ప్రజా ప్రకటన సృష్టించండి",
+  "title":"శీర్షిక",
+  "description":"వివరణ",
+  "scheme":"ఒప్పందం (అప్లికబుల్)",
+  "instruction":"సూచనాలు",
+  "submitannouncement":"ప్రకటన సమర్పించు",
+  "surveyresponses":"సర్వే ప్రతిస్పందనలు",
+  "noresponseyet":"ఇప్పటివరకు ప్రతిస్పందనలు లేవు.",
+  "registrationlink":"రిజిస్ట్రేషన్ లింక్",
+  "viewfirpdf":"FIR PDF చూడండి",
+  "active":"సక్రియ ఫిర్యాదులు",
+  "resolvedcomplaints":"పరిష్కరించబడిన ఫిర్యాదులు",
+  "all":"అన్ని",
+  "high":"ఎన్నిక",
+  "medium":"మాధ్యమం",
+  "low":"తక్కువ",
+  "fir": "FIR",
+  "main": "ప్రధాన",
+  "create": "సృష్టించు",
+  "id":"సర్వే ID",
+  "no": "సర్వే ప్రతిస్పందనలు లేవు.",
+  "ndps"   :"NDPS",
+  "scst"   :"SCST చట్టం",
+  "pmla"   :"PMLA",
+  "crpc"   :"CRPC",
+  "ipc"    :"IPC",
+  "children"  :"పిల్లలపై నేరాలు",
+  "state"     :"రాజ్యానికి వ్యతిరేక నేరాలు",
+  "foreigner" :"విదేశీయులపై నేరాలు",
+  "crimeScSt" :"SCs మరియు STs పై నేరాలు",
+  "cyber"     :"సైబర్ క్రైమ్",
+  "economic"  :"ఆర్థిక నేరాలు",
+  "women"     :"స్త్రీలపై నేరాలు",
+  "fine": "జమానం",
+  "both": "రెండు",
+  "imprisonment": "జైలుశిక్ష",
+  "statute"   :"చట్టం",
+  "offense"   : "అపరాధం వర్గం",
+  "penalty"   : "శిక్ష",
+  "imprisonment":"కరిందిన శిక్ష",
+  "escape"      :"పొయెను బారినపాలు",
+  "influencer" :"ప్రభావం",
+  "surety" :"భరోసా బాండు అవసరం",
+  "personal" :"వ్యక్తిగత బాండు అవసరం",
+  "fines"  :"వసూళ్లు వర్తించు",
+  "served"  :"అర్థమొత్తం కాలం సేవ్",
+  "riskScore" :"ప్రమాదం స్కోరు",
+  "severity" :"శిక్ష తీవ్రత",
+  "selectlabel" :"దయచేసి $label ఎంచుకోండి",
+  "rror" :"తప్పు",
+  "granted" :"బెయిల్ మంజూరు",
+  "denied" :"బెయిల్ తిరస్కరించబడింది",
+  "ok"  : "సరే",
+  "fyn" :"వచ్చిన వసూలు",
+  "oth" :"రెండు",
+  "imprison": "కరిందిన శిక్ష",
+  "microphone" :"మైక్రోఫోన్ ప్రారంభించడానికి ట్యాప్ చేయండి",
+  "speech" :"స్పీచ్ గుర్తింపు అందుబాటులో లేదు.",
+  "deletemsg" :"సందేశాన్ని తొలగించండి",
+  "share" :"పంచుకోండి",
+  "askquestion":"ప్రశ్న అడగండి...",
+  "failmsg" :"సందేశం పంపడంలో విఫలమైంది.",
+  "nomsg" :"ఇప్పుడు సందేశాలు లేవు.",
+  "writemsg" :"సందేశం రాయండి...",
+  "selectadvocate":"వకీల్ ఎంచుకోండి",
+  "noadvocate" :"వకీలులు లేవు.",
+  "low" :"తక్కువ",
+  "pending":"పెండింగ్",
+  "cloudinary":"Cloudinary కి ఫైలు అప్‌లోడ్ చేయడంలో విఫలమైంది.",
+  "complaintsub":"ఫిర్యాదు విజయవంతంగా సమర్పించబడింది!",
+  "filecom":"ఫిర్యాదు దాఖలు చేయండి",
+  "incidentdesc":"పరిణామం వివరణ",
+  "providedesc":"దయచేసి పరిణామం వివరణను అందించండి.",
+  "prior":"ప్రాధాన్యత",
+  "low":"తక్కువ",
+  "medium":"మాధ్యమం",
+  "high": "ఎన్నిక",
+  "usecurrentloc":"ప్రస్తుత స్థలాన్ని ఉపయోగించండి",
+  "attach":"మీడియా/దస్తావేజులను జోడించండి",
+  "submitcomp":"ఫిర్యాదు సమర్పించండి",
+  "governmentscheme":"ప్రభుత్వ స్కీమ్స్ & చట్ట హక్కులు",
+  "surveys":"సర్వేలు",
+  "announcements":"ప్రకటనలు",
+  "nosurveys":"సర్వేలు లేవు.",
+  "untitledsurvey":"శీర్షిక లేని సర్వే",
+  "sursub":"సర్వే విజయవంతంగా సమర్పించబడింది",
+  "surdetails":"సర్వే వివరాలు",
+  "alreadyans":"మీరు ఇప్పటికే ఈ సర్వేకు సమాధానం ఇచ్చారు.",
+  "subsurvey":"సర్వే సమర్పించండి",
+  "noannoun":"ప్రకటనలు లేవు.",
+  "untitledannoun":"శీర్షిక లేని ప్రకటన",
+  "announdet":"ప్రకటన వివరాలు",
+  "untscheme":"శీర్షిక లేని స్కీమ్",
+  "nodescAvl":"వివరణ అందుబాటులో లేదు.",
+  "instructions": "సూచనాలు:",
+  "noinst":"సూచనాలు అందుబాటులో లేవు.",
+  "unableopen":"రిజిస్ట్రేషన్ లింక్ ని తెరవలేము.",
+  "regScheme":"స్కీమ్ కోసం నమోదు చేయండి",
+  "nouserName":"వినియోగదారునామం అందుబాటులో లేదు.",
+  "chtbt" :"చాట్‌బాట్",
+  "prfl" :"ప్రొఫైల్",
+  "fil" :"దాఖలు",
+  "cht" :"చాట్"
 }
