--- a/lib/l10n/app_tn.arb
+++ b/lib/l10n/app_tn.arb
@@ -1,83 +1,246 @@
 {
-  "hello"          : "வணக்கம், நான் ஜூடிகா உங்கள் சட்ட உதவியாளர்.",
-  "mymission"      : "சட்ட அமைப்பில் அனைவருக்கும் தேவையான ஆதரவு கிடைப்பதை உறுதி செய்வதே எனது நோக்கம். நீங்கள் ஆலோசனை பெறுகிறீர்களோ, ஜாமீன் குறித்த வழிகாட்டுதலைத் தேடுகிறீர்களோ, அல்லது சட்ட விதிமுறைகளை விரைவாகப் புரிந்துகொள்ள வேண்டியிருக்கிறீர்களோ, நான் உதவ இங்கே இருக்கிறேன்.",
+  "hello"          : "வணக்கம், நான் ஜுடிகா உங்கள் சட்ட உதவியாளர்.",
+  "mymission"      : "என் பணி, அனைவரும் சட்டத் துறையில் தேவையான ஆதரவை பெறுவதை உறுதி செய்வதாகும். நீங்கள் ஆலோசனை தேடும், ஜாமீன் பற்றிய வழிகாட்டி தேடும், அல்லது சட்ட பரிமாணங்களை விரைவாகப் புரிந்து கொள்ள விரும்பினால், நான் உதவுவதற்குள்ளாக இருக்கின்றேன்.",
   "getstarted"     : "தொடங்குங்கள்",
-  "makinglegal"    : "சட்ட ஆதரவை தெளிவாகவும் அணுகக்கூடியதாகவும் மாற்றுதல்.",
-  "isimplify"      : " நான் சிக்கலான சட்ட விதிமுறைகள் மற்றும் செயல்முறைகளை எளிதாக்குகிறேன், வழக்கமான பயனர்கள் தங்கள் உரிமைகள் மற்றும் விருப்பங்களைப் புரிந்துகொள்ள உதவுகிறேன். சட்டப் பிரச்சினையை எதிர்கொண்டாலும் சரி அல்லது ஜாமீன் செயல்முறையை வழிநடத்தினாலும் சரி, நான் தெளிவான, நேரடியான வழிகாட்டுதலை வழங்குகிறேன். அவர்கள் யாராக இருந்தாலும் சரி, அனைவருக்கும் நம்பகமான சட்ட ஆதரவு கிடைப்பதை உறுதி செய்வதே எனது குறிக்கோள்.",
-  "empowering"     : "விரைவான, நம்பகமான சட்ட வளங்களுடன் வழக்கறிஞர்களை மேம்படுத்துதல்.",
-  "iprovide"       : "வழக்கு குறிப்புகள் மற்றும் சட்ட முன்னோடிகள் முதல் நடைமுறை வழிகாட்டுதல்கள் வரை அத்தியாவசிய சட்ட ஆதாரங்களை விரைவாகவும் நம்பகமானதாகவும் அணுகும் வசதியை வழக்கறிஞர்களுக்கு நான் வழங்குகிறேன். உங்கள் வேலையை நெறிப்படுத்துவதே எனது குறிக்கோள், இதனால் உங்கள் வாடிக்கையாளர்களை திறம்பட ஆதரிப்பதில் அதிக கவனம் செலுத்த முடியும்.",
-  "streamlining"   : "துல்லியமான சட்ட மொழியுடன் எஃப்.ஐ.ஆர் தாக்கல் செய்வதை நெறிப்படுத்துதல்.",
-  "iassist"        : "என்எல்பி-ஐப் பயன்படுத்தி தனிப்பட்ட புகார்களை துல்லியமான சட்ட மொழியாக மாற்றுவதன் மூலமும், எஃப்.ஐ.ஆர் பதிவு செய்வதை எளிமைப்படுத்தவும் விரைவுபடுத்தவும் தொடர்புடைய சட்டங்கள் மற்றும் பிரிவுகளை அடையாளம் காண்பதன் மூலமும் காவல்துறை அதிகாரிகளுக்கு நான் உதவுகிறேன். இது எஃப்.ஐ.ஆர் சட்டத் தரங்களுடன் ஒத்துப்போவதை உறுதிசெய்கிறது, மேலும் அதிகாரிகள் ஒரு சட்ட நிபுணரை உடனடியாக அணுக முடியாவிட்டாலும், புகார்களுக்கு மிகவும் திறமையாக பதிலளிக்க உதவுகிறது.",
-  "judica"         : "ஜூடிகா",
+  "makinglegal"    : "சட்ட ஆதரவை தெளிவான மற்றும் எளிதானதாக மாற்றுதல்.",
+  "isimplify"      : "நான் சிக்கலான சட்ட வார்த்தைகள் மற்றும் செயல்முறைகளை எளிதாக்கி, பொதுவான பயனர்களுக்கு அவர்களின் உரிமைகள் மற்றும் விருப்பங்களை புரிந்து கொள்ள உதவுகிறேன். சட்ட பிரச்சனையை எதிர்கொள்கின்றாலும், ஜாமீன் செயல்முறையைப் பயன்படுத்துவதற்குமான வழிகாட்டி தேவைப்பட்டாலும், நான் தெளிவான மற்றும் நேர்மையான வழிகாட்டியுடன் உதவுகிறேன்.",
+  "empowering"     : "அவகாசமான மற்றும் நம்பகமான சட்ட ஆதரவை விரைவில் வழங்குதல்.",
+  "iprovide"       : "நான் வழக்கறிஞர்களுக்கு அவசியமான சட்ட ஆதரவை நம்பகமாக வழங்குகிறேன், வழக்கு குறிப்புகள், சட்ட முன்னுரைகள் மற்றும் செயல்முறை வழிகாட்டிகளுடன். நான் உங்கள் வேலைக்கு விரைவானதாக செய்ய உதவுகிறேன், அதில் உங்கள் வாடிக்கையாளர்களை சிறப்பாக ஆதரிக்க விரும்புகிறீர்கள்.",
+  "streamlining"   : "சரியான சட்ட மொழி மூலம் FIR பதிவு செயல்பாட்டை எளிமையாக்குதல்.",
+  "iassist"        : "நான் போலீசாருக்கு தனிப்பட்ட புகார்களை சரியான சட்ட மொழியில் மாற்றுவதற்கான உதவியை வழங்குகிறேன், இந்த செயல்முறை FIR பதிவுக்கு உதவுகின்றது, இதனால் போலீசாரின் வேலை நேரம் குறைகிறது, சட்ட பரிந்துரைகளை இல்லாமல் வழிகாட்ட உதவும்.",
+  "judica"         : "ஜுடிகா",
   "username"       : "பயனர்பெயர்",
   "email"          : "மின்னஞ்சல்",
-  "password"       : "கடவுச்சொல்",
-  "confirmpassword": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
-  "citizen"        : "குடிமகன்",
-  "police"         : "காவல் துறை",
-  "advocate"       : "வக்கீல்",
-  "register"       : "பதிவு செய்யவும்",
-  "haveanaccount"  : "கணக்கு உள்ளதா? உள்நுழையவும்",
-  "forgotpassword" : "கடவுச்சொல் மறந்துவிட்டது",
-  "login"          : "உள் நுழை",
+  "password"       : "கடவுச்சொல்",
+  "confirmpassword": "கடவுச்சொல்லை உறுதிப்படுத்துக",
+  "citizen"        : "பொதுமக்கள்",
+  "police"         : "பொலிஸ்",
+  "advocate"       : "வழக்கறிஞர்",
+  "register"       : "பதிவு செய்க",
+  "haveanaccount"  : "கணக்கு உள்ளதா?",
+  "forgotpassword" : "கடவுச்சொல் மறந்து விட்டீர்களா?",
+  "login"          : "உள்நுழைய",
   "orcontinuewith" : "அல்லது தொடரவும்",
-  "donthaveaccount": "கணக்கு இல்லையா? பதிவு செய்யவும்.",
-  "chatbot"        : "சாட்போட்",
-  "askaquestion"   : "ஒரு கேள்வி கேள்",
-  "profile"        : "சுயவிவரம்",
+  "donthaveaccount": "கணக்கு இல்லையா? பதிவு செய்யவும்",
+  "chatbot"        : "சாட் போட்",
+  "profile"        : "பروفைல்",
   "name"           : "பெயர்",
   "mobilenumber"   : "மொபைல் எண்",
-  "dateofbirth"    : "பிறந்த தேதி",
-  "notavailable"   : "கிடைக்கவில்லை",
+  "dateOfBirth"    : "பிறந்த தேதி",
+  "notavailable"   : "இல்லை",
   "address"        : "முகவரி",
-  "Logout"         : "வெளியேறு",
-  "clicktoupload"  : "பதிவேற்ற கிளிக் செய்யவும்",
+  "logout"         : "வெளியேறுக",
+  "clicktoupload"  : "பதிவேற்றுவதற்கான கிளிக் செய்க",
   "save"           : "சேமி",
-  "cancel"         : "ரத்துசெய்",
-  "fir"            : "எஃப்.ஐ.ஆர்",
-  "generatefir"    : "எஃப்.ஐ.ஆர் ஐ உருவாக்கு",
-  "viewfir"        : "காண்க எப்.ஐ.ஆர்.",
-  "booknumber"     : "புத்தக எண்",
-  "formnumber"     : "படிவ எண்",
-  "policestationame": "காவல் நிலையத்தின் பெயர்",
-  "district"       : "மாவட்டம்",
-  "dhoccurrence"   : "சம்பவம் நடந்த தேதி/மணிநேரம்",
-  "dhreported"     : "தெரிவிக்கப்பட்ட தேதி/மணிநேரம்",
-  "informername"   : "தகவல் அளிப்பவரின் பெயர்",
-  "descripoffense" : "குற்றத்தின் விளக்கம்",
-  "placeofoccur"   : "நிகழ்ந்த இடம்",
-  "criminalname"   : "குற்றப் பெயர்",
-  "investsteps"    : "விசாரணை படிகள்",
+  "cancel"         : "ரத்து செய்",
+  "fir"            : "FIR",
+  "generatefir"    : "FIR உருவாக்குக",
+  "viewfir"        : "FIR பார்க்க",
+  "booknumber"     : "புத்தகம் எண்",
+  "formnumber"     : "படிவம் எண்",
+  "policestationame": "போலீசார் நிலையப் பெயர்",
+  "district"       : " மாவட்டம்",
+  "dhoccurrence"   : "நிகழ்வின் தேதி/நேரம்",
+  "dhreported"     : "அறிக்கையிடப்பட்ட தேதி/நேரம்",
+  "informername"   : "அறிக்கையிடுநரின் பெயர்",
+  "descripoffense" : "சட்டவிரோதத்தின் விளக்கம்",
+  "placeofoccur"   : "நிகழ்வு இடம்",
+  "criminalname"   : "குற்றவாளி பெயர்",
+  "investsteps"    : "ஆராய்ச்சி படிகள்",
   "dispatchtime"   : "அனுப்பும் நேரம்",
+  "nofirsavailable":"யாரும் FIR இல்லை",
   "bail"           : "ஜாமீன்",
   "statute"        : "சட்டம்",
-  "ndps"           : "என்டிபிஎஸ்",
-  "scst"           : "எஸ்சி எஸ்டி சட்டம்",
-  "pmla"           : "பி.எம்.எல்.ஏ.",
-  "crpc"           : "சிஆர்பிசி",
-  "ipc"            : "ஐபிசி",
-  "offensecategory": "குற்ற வகை",
+  "ndps"           : "NDPS",
+  "scst"           : "SC ST சட்டம்",
+  "pmla"           : "PMLA",
+  "crpc"           : "CrPC",
+  "ipc"            : "IPC",
+  "offensecategory": "சட்டவிரோத வகை",
   "crimeschildren" : "குழந்தைகளுக்கு எதிரான குற்றங்கள்",
-  "offensestate"   : "அரசுக்கு எதிரான குற்றம்",
-  "crimesforeigner": "வெளிநாட்டினருக்கு எதிரான குற்றங்கள்",
-  "crimesscst"     : "எஸ்சி மற்றும் எஸ்டி பிரிவினருக்கு எதிரான குற்றங்கள்",
+  "offensestate"   : "மாநிலத்திற்கு எதிரான குற்றங்கள்",
+  "crimesforeigner": "வெளிநாட்டவர்களுக்கு எதிரான குற்றங்கள்",
+  "crimesscst"     : "SCs மற்றும் STs எதிரான குற்றங்கள்",
   "cybercrime"     : "சைபர் குற்றம்",
   "economicoffense": "பொருளாதார குற்றங்கள்",
   "crimeswomen"    : "பெண்களுக்கு எதிரான குற்றங்கள்",
   "penalty"        : "தண்டனை",
-  "fine"           : "சரி",
-  "imprisonment"   : "சிறைவாசம்",
-  "both"           : "இரண்டும்",
-  "imprisonserved" : "சிறைவாசம் அனுபவித்த காலம் (ஆண்டுகளில்)",
-  "riskofescape"   : "தப்பிக்கும் ஆபத்து",
+  "fine"           : "பணம் தண்டனை",
+  "imprisonment"   : "சிறை தண்டனை",
+  "both"           : "இரண்டையும்",
+  "imprisonserved" : "சிறை தண்டனை பரப்பாக (ஆண்டுகளில்)",
+  "riskofescape"   : "பத்திரம் பெறும் ஆபத்து",
   "no"             : "இல்லை",
   "yes"            : "ஆம்",
-  "riskofinfluence": "செல்வாக்கின் ஆபத்து",
-  "suretybond"     : "உத்தரவாதப் பத்திரம் தேவை",
-  "personalbond"   : "தனிப்பட்ட பத்திரம் தேவை",
-  "finesapplicable": "அபராதங்கள் பொருந்தும்",
-  "servedhalfterm" : "அரை கால சேவை",
-  "riskscore"      : "ஆபத்து மதிப்பெண்",
-  "penaltySeverity":"தண்டனையின் கடுமை",
-  "submit"         : "சமர்ப்பிக்கவும்"
+  "riskofinfluence": "பெரிய தாக்கத்தின் ஆபத்து",
+  "suretybond"     : "உறுதிப்பத்திரம் தேவை",
+  "personalbond"   : "தனிப்பட்ட உறுதிப்பத்திரம் தேவை",
+  "finesapplicable": "பணம் தண்டனைகள் பொருந்தும்",
+  "servedhalfterm" : "இரண்டாவது பாதி காலம் பூர்த்தி",
+  "riskscore"      : "ஆபத்து மதிப்பீடு",
+  "penaltySeverity":"தண்டனையின் தீவிரம்",
+  "submit"         : "சமர்ப்பிக்கவும்",
+  "please"         :"தயவு செய்து மின்னஞ்சல் முகவரியை உள்ளிடவும்.",
+  "resetpassword"  :"கடவுச்சொல் மீட்டமைப்பு மின்னஞ்சல் அனுப்பப்பட்டது! உங்கள் இன்பாக்ஸ் சரிபார்க்கவும்.",
+  "error"          :"ஒரு பிழை ஏற்பட்டுள்ளது. மீண்டும் முயற்சிக்கவும்.",
+  "enteremail"     :"மின்னஞ்சல் முகவரியை உள்ளிடவும்",
+  "repassword"     :"கடவுச்சொல் மீட்டமைக்க →",
+
+  "cannotemail"    :"மின்னஞ்சல் காலியாக இருக்க முடியாது",
+  "cannotpasswort" :"கடவுச்சொல் காலியாக இருக்க முடியாது",
+  "usernotfound"   :"பயனர் எடுப்புகள் காணவில்லை.",
+  "pleasewait"     :"தயவு செய்து காத்திருக்கவும்...",
+  "continu"       :"அல்லது தொடரவும்",
+  "account"        :"கணக்கு இல்லையா?",
+  "sign"           :"பதிவு செய்யவும்",
+  "selectLanguage" :"மொழியை தேர்வு செய்க",
+  "changessaved"   : "மாற்றங்கள் வெற்றிகரமாக சேமிக்கப்பட்டன!",
+  "edittitle"      : "$title தொகுக்க",
+  "enternewtitle"  : "புதிய $title உள்ளிடவும்",
+  "passworddont"  :"கடவுச்சொற்கள் பொருந்தவில்லை!",
+  "regsuccess"     :"பதிவு வெற்றிகரமாக முடிந்தது!",
+  "weakPassword"   :"வலுவான கடவுச்சொல்",
+  "passwordtooweak":"கடவுச்சொல் மிகவும் பலவீனமானது.",
+  "emailalreadyinuse": "மின்னஞ்சல் ஏற்கனவே பயன்படுத்தப்படுகிறது",
+  "alreadyexist"   : "இந்த மின்னஞ்சலுக்கு ஏற்கனவே கணக்கு உள்ளது.",
+  "invalidemail"   :"மின்னஞ்சல் தவறானது",
+  "notvalid"       :"கொடுக்கப்பட்ட மின்னஞ்சல் செல்லாது.",
+  "error"          :"ஒரு பிழை ஏற்பட்டுள்ளது. மீண்டும் முயற்சிக்கவும்.",
+  "users"          : "பயனர்கள்",
+  "role"           : "பங்கு",
+  "judica"         :"ஜுடிகா",
+  "selectrole"       :"பங்கு தேர்வு செய்க",
+  "chathistory"      :"சாட் வரலாறு",
+  "question"         :"கேள்வி",
+  "answer"           :"பதில்",
+  "errore"           :"பிழை: $e",
+  "askaquestion"     :"ஒரு கேள்வி கேளுங்கள்...",
+  "delete"           :"அழிக்கவும்",
+  "share"            :"பகிரவும்",
+  "deletemsg":       "செய்தி அழிக்கவும்",
+  "policecommunity"  :"பொலீசார் சமூகச் செயல்பாடு",
+  "pleaseentertitle" :"தயவு செய்து தலைப்பு மற்றும் கேள்விகளை உள்ளிடவும்",
+  "surveycreatedsuccessfully":"சர்வே வெற்றிகரமாக உருவாக்கப்பட்டது",
+  "plscmpltannouncement":"அறிவிப்பின் விவரங்களை பூர்த்தி செய்யவும்",
+  "announcementcreatedsuccessfully":"அறிவிப்பு வெற்றிகரமாக உருவாக்கப்பட்டது",
+  "policecommunity"   :"பொலீசார் சமூகச் செயல்பாடு",
+  "survey": "சர்வே",
+  "anunce": "அறிவிப்பு",
+  "review": "மதிப்பீடு",
+  "createsurvey"      :"சர்வே உருவாக்கு",
+  "surveytitle"       :"சர்வே தலைப்பு",
+  "entersurveyquestion":"சர்வே கேள்வி உள்ளிடவும்",
+  "entersurveyoption":"சர்வே விருப்பங்களை உள்ளிடவும்",
+  "addoption":"விருப்பத்தைச் சேர்க்கவும்",
+  "addquestion":"கேள்வியைச் சேர்க்கவும்",
+  "sub": "சர்வே சமர்ப்பிக்கவும்",
+  "reviewsurvey":"சர்வே மதிப்பீடு",
+  "reviewyoursurvey":"உங்கள் சர்வே மதிப்பீடு",
+  "options":"விருப்பங்கள்",
+  "submitsurvey":"சர்வே சமர்ப்பிக்கவும்",
+  "editsurvey":"சர்வே தொகுக்க",
+  "showresponses":"பதில் பார்க்க",
+  "createpublicannouncement":"பொது அறிவிப்பை உருவாக்கு",
+  "title":"தலைப்பு",
+  "description":"விளக்கம்",
+  "scheme":"அந்த அறிவிப்பு திட்டம் (தேவைப்பட்டால்)",
+  "instruction":"வழிகாட்டி",
+  "submitannouncement":"அறிவிப்பு சமர்ப்பிக்கவும்",
+  "surveyresponses":"சர்வே பதில்கள்",
+  "noresponseyet":"இன்னும் பதில்கள் இல்லை.",
+  "registrationlink":"பதிவு இணைப்பு",
+  "viewfirpdf":"FIR PDF ஐப் பார்க்கவும்",
+  "active":"செயலில் உள்ள புகார்கள்",
+  "resolvedcomplaints":"தீர்க்கப்பட்ட புகார்கள்",
+  "all":"அனைத்து",
+  "high":"உயர்",
+  "medium":"மத்திய",
+  "low":"குறைந்த",
+  "fir": "FIR",
+  "main": "முதன்மை",
+  "create": "உருவாக்கு",
+  "id":"சர்வே ஐடி",
+  "no": "சர்வே பதில்கள் இல்லை.",
+  "ndps"   :"NDPS",
+  "scst"   :"SCST சட்டம்",
+  "pmla"   :"PMLA",
+  "crpc"   :"CrPC",
+  "ipc"    :"IPC",
+  "children"  :"குழந்தைகளுக்கு எதிரான குற்றங்கள்",
+  "state"     :"மாநிலத்திற்கு எதிரான குற்றங்கள்",
+  "foreigner" :"வெளிநாட்டவர்களுக்கு எதிரான குற்றங்கள்",
+  "crimeScSt" :"SCs மற்றும் STs எதிரான குற்றங்கள்",
+  "cyber"     :"சைபர் குற்றம்",
+  "economic"  :"பொருளாதார குற்றம்",
+  "women"     :"பெண்களுக்கு எதிரான குற்றங்கள்",
+  "fine": "பணத் தண்டனை",
+  "both": "இரண்டும்",
+  "imprisonment": "காரணம்",
+  "statute"   :"சட்டம்",
+  "offense"   : "சட்டவிரோத வகை",
+  "penalty"   : "தண்டனை",
+  "imprisonment":"சிறை தண்டனை",
+  "escape"      :"பத்திரம் பெறும் ஆபத்து",
+  "influencer" :"பெரிய தாக்கத்தின் ஆபத்து",
+  "surety" :"உறுதிப்பத்திரம் தேவை",
+  "personal" :"தனிப்பட்ட உறுதிப்பத்திரம் தேவை",
+  "fines"  :"பணம் தண்டனைகள் பொருந்தும்",
+  "served"  :"இரண்டாவது பாதி காலம் பூர்த்தி",
+  "riskScore" :"ஆபத்து மதிப்பீடு",
+  "severity" :"தண்டனையின் தீவிரம்",
+  "selectlabel" :"தயவு செய்து $label தேர்வு செய்யவும்",
+  "rror" :"பிழை",
+  "granted" :"ஜாமீன் வழங்கப்பட்டது",
+  "denied" :"ஜாமீன் மறுக்கப்பட்டது",
+  "ok"  : "சரி",
+  "fyn" :"பணம்",
+  "oth" :"இரண்டையும்",
+  "imprison": "சிறை",
+  "microphone" :"கதராபி தொடங்க தேவையான மைக்ரோஃபோன் ஐப் பட்டியலிடவும்",
+  "speech" :"பேச்சு அடையாளம் காண்பது கிடைக்கவில்லை.",
+  "deletemsg" :"செய்தி அழிக்கவும்",
+  "share" :"பகிரவும்",
+  "askquestion":"ஒரு கேள்வி கேளுங்கள்...",
+  "failmsg" :"செய்தி அனுப்புவதில் பிழை.",
+  "nomsg" :"இன்னும் எந்த செய்தியும் இல்லை.",
+  "writemsg" :"செய்தி எழுதுங்கள்...",
+  "selectadvocate":"வழக்கறிஞரை தேர்வு செய்க",
+  "noadvocate" :"எந்தவொரு வழக்கறிஞருமில்லை.",
+  "low" :"குறைந்த",
+  "pending":"நிலுவையில்",
+  "cloudinary":"க்ளவுடினரி சேவைக்கு பதிவேற்ற முடியவில்லை.",
+  "complaintsub":"புகார் வெற்றிகரமாக சமர்ப்பிக்கப்பட்டது!",
+  "filecom":"புகார் பதிவு செய்யவும்",
+  "incidentdesc":"பிறப்பின் விளக்கம்",
+  "providedesc":"செய்தி விளக்கம் கொடுக்கவும்.",
+  "prior":"முன்னிலை",
+  "low":"குறைந்த",
+  "medium":"மத்திய",
+  "high": "உயர்",
+  "usecurrentloc":"சமிக்ஷி இப்போது உள்ள இடத்தைப் பயன்படுத்த",
+  "attach":"காட்சிகள் / ஆவணங்களை இணைக்க",
+  "submitcomp":"புகார் சமர்ப்பிக்கவும்",
+  "governmentscheme":"அரசு திட்டங்கள் & சட்ட உரிமைகள்",
+  "surveys":"சர்வே",
+  "announcements":"அறிவிப்புகள்",
+  "nosurveys":"யாரும் சர்வே இல்லையா.",
+  "untitledsurvey":"எதுவும் தலைப்பில்லாத சர்வே",
+  "sursub":"சர்வே சமர்ப்பிக்கப்பட்டது",
+  "surdetails":"சர்வே விவரங்கள்",
+  "alreadyans":"நீங்கள் ஏற்கனவே இந்த சர்வேக்கு பதிலளித்துள்ளீர்கள்.",
+  "subsurvey":"சர்வே சமர்ப்பிக்கவும்",
+  "noannoun":"அறிவிப்புகள் இல்லை",
+  "untitledannoun":"பெயர் இல்லாத அறிவிப்பு",
+  "announdet":"அறிவிப்பு விவரங்கள்",
+  "untscheme":"பெயர் இல்லாத திட்டம்",
+  "nodescAvl":"விளக்கம் இல்லை.",
+  "instructions": "வழிகாட்டி:",
+  "noinst":"வழிகாட்டி இல்லை.",
+  "unableopen":"பதிவு இணைப்பைத் திறக்க முடியவில்லை.",
+  "regScheme":"திட்டத்திற்கு பதிவு செய்யவும்",
+  "nouserName":"பயனர் பெயர் கிடைக்கவில்லை.",
+  "chtbt" :"சாட் போட்",
+  "prfl" :"பروفைல்",
+  "fil" :"பதிவேற்ற",
+  "cht" :"சாட்"
 }
